--- a/Diagnostics/1 《绪论、问诊、基本检查法》.md
+++ b/Diagnostics/1 《绪论、问诊、基本检查法》.md
@@ -2,32 +2,34 @@
 
 ---
 
-&nbsp; 
+***PS***
 
-: *PS*. 
 ==右上腹==痛可能是==急性心肌梗死==
 
-: 用药可以是试探性的，比如发烧可以试探性用抗生素，如果缓解可以判断为感染性
+用药可以是试探性的, 比如发烧可以试探性用抗生素, 如果缓解可以判断为感染性
 
 ---
 
-## 1. 病史采集 (hitstory taking)
-- 什么时候起病？有无诱因？
-- 哪些表现？
-- 到那个医院看过病？
-- 医生做了哪些检查、化验等？
-- 医生给出的判断是什么？
-- 用的什么药？
-- 有没有按照医生的意见服药？
-- 用药后病情、副作用？
-- 有没有其他疾病？
+## 1. 病史采集 (hitstory taking) 
+
+- 什么时候起病? 有无诱因? 
+- 哪些表现? 
+- 到那个医院看过病? 
+- 医生做了哪些检查、化验等? 
+- 医生给出的判断是什么? 
+- 用的什么药? 
+- 有没有按照医生的意见服药? 
+- 用药后病情、副作用? 
+- 有没有其他疾病? 
 
 ### 1.1. 内容纲要
-#### 1.1.1. 一般项目 (general data)
+
+#### 1.1.1. 一般项目 (general data) 
+
 - 姓名
-- 年龄——实足年龄，不可以“成人”或者“儿”代替
+- 年龄——实足年龄, 不可以 "成人" 或者 "儿" 代替
 - 民族
-- 籍贯——地区流行病(市 、 县 ， 不可以用省等的过于大的单位来描述)
+- 籍贯——地区流行病 (市, 县, 不可以用省等的过于大的单位来描述) 
 - 入院日期——危重者详细到分钟
 - 病史叙述者——病史陈述非本人者应注明与患者的关系
 - 性别
@@ -36,185 +38,198 @@
 - 现在住址——地区流行病
 - 记录日期
 - 可靠程度
-#### 1.1.2. 主诉 (chief complaints)
-- 患者感受最主要的痛苦 ， 或最明显的症状或体征 ， 也就是本次就诊的主要原因以及患病到就诊的时间
-    
-<center>
 
-**记录方式 ： 主要症状 + 部位 + 时间**
-</center>
+#### 1.1.2. 主诉 (chief complaints) 
 
-- 尽量用病人描述的症状 ， 但若症状较复杂 ， 应结合整个病史归纳出能反应疾病特征的主诉
+- 患者感受最主要的痛苦, 或最明显的症状或体征, 也就是本次就诊的主要原因以及患病到就诊的时间
 
-    &nbsp; 
-    : 主诉 ： 主要症状 + 部位 + 时间 ：
-        - 咽痛 、 高热 2 天
-        - 活动后心慌气短 2 年 ， 下肢浮肿 2 周余
-        - 畏寒 、 发热 、 右胸痛 、 咳嗽 3 天
-        - 多饮 、 多食 、 多尿 、 消瘦 1 年
-        - 体检发现 “ 高血压 10 年 ”
+**记录方式: 主要症状 + 部位 + 时间**
 
-#### 1.1.3. 现病史 (history of present illness)
+- 尽量用病人描述的症状, 但若症状较复杂, 应结合整个病史归纳出能反应疾病特征的主诉
+
+主诉: 主要症状 + 部位 + 时间:
+
+- 咽痛, 高热 2 天
+- 活动后心慌气短 2 年, 下肢浮肿 2 周余
+- - 畏寒, 发热, 右胸痛, 咳嗽 3 天
+- 多饮, 多食, 多尿, 消瘦 1 年
+- 体检发现 "高血压 10 年"
+
+#### 1.1.3. 现病史 (history of present illness) 
+
 ***对主诉的扩展***
-1.  起病的情况及时间 ： 主要症状 、 病因与诱因
-2. 医生做的体检 、 辅助检查
-3. 诊断 ？
-4. 如何治疗 ？ 用药 （ 包括药名 、 剂量 、 途径 、 用药时间 ）
-5. 疗效怎么样 ， 化验检查结果 ， 不良反应 ？
+
+1.  起病的情况及时间: 主要症状, 病因与诱因
+2. 医生做的体检, 辅助检查
+3. 诊断 ? 
+4. 如何治疗 ?  用药 (包括药名, 剂量, 途径, 用药时间) 
+5. 疗效怎么样, 化验检查结果, 不良反应 ? 
 6. 病情的发展与演变
-7. 病程中的一般情况 ： 病后到就诊前或入院前的精神 、 体力 、 体重 、 食欲 、 食量 、 睡眠与大小便的情况
-#### 1.1.4.  既往史 (past history)
-***既往史中所患疾病可能一直持续到现在 ， 如高血压 、 糖尿病 、 高脂血症等 ， 但由于不是主诉的内容 ， 一般放在既往史中陈述 。***
+7. 病程中的一般情况: 病后到就诊前或入院前的精神, 体力, 体重, 食欲, 食量, 睡眠与大小便的情况
+
+#### 1.1.4.  既往史 (past history) 
+
+***既往史中所患疾病可能一直持续到现在, 如高血压, 糖尿病, 高脂血症等, 但由于不是主诉的内容, 一般放在既往史中陈述 。***
+
 1. 一般健康情况
-2. 曾患疾病 ， 包括传染病
-3. 外伤 、 手术史
+2. 曾患疾病, 包括传染病
+3. 外伤, 手术史
 4. 预防接种史
-5. 食物 、 药物过敏史
-#### 1.1.5.  系统回顾 (review of systems)
+5. 食物, 药物过敏史
+
+#### 1.1.5.  系统回顾 (review of systems) 
+
 ***十个大项: 头颅五官、呼吸、心血管、消化、泌尿生殖、内分泌与代谢、造血、肌肉与骨关节、神经系统、精神状态***
-1. 呼吸系统：有无咳嗽、咳痰、咯血、胸痛、呼吸困难等
-2. 循环系统：有无胸痛、心悸、胸闷、呼吸困难、水肿等。心前区疼痛的性质、程度、出现和持续时间，放射部位、发作诱因和缓解方法。心悸的发生时间与诱因
-3. 消化系统：有无吞因困难、食欲、嗳气、返酸、恶心、呕吐、呕血、腹痛、腹泄、腹胀等。排便次数、粪便颜色、形状和量，排便时有无腹痛或里急后重
-4. 泌尿系统：有无水肿、多尿、少尿、夜尿增多、尿量、尿的颜色。有无尿潴留及尿失禁等
-5. 造血系统：皮肤粘膜有无苍白、黄染、出血、瘀斑、血肿及淋巴结、肝、脾肿大、骨骼痛等
-6. 内分泌代谢系统：有无怕热、多汗、乏力、畏寒、头痛、视力障碍、心悸、食欲变化、烦渴、多尿、水肿等。有无肌肉震颤及痉挛，有无产后大出血
-7. 神经精神系统：有无头痛、失眠、嗜睡、记忆力减退、意识障碍、晕厥、痉挛、瘫痪、视力障碍、感觉及运动异常、性格改变、感觉与定向障碍。精神状态、思维过程、智力、能力、自知力等
-8. 肌肉骨骼系统：有无肢体麻木、疼痛、痉挛、萎缩、瘫痪等。有无关节肿痛、运动障碍、外伤、骨折、关节脱位、先天畸形等。
-#### 1.1.6.  个人史 (personal history)
-1.  社会经历：包括出生地、居住地、居留时间、受教育程度、经济生活、业余爱好等
-2. 职业及工作条件：包括工种、劳动环境、对工业毒物的接触情况等
-3. 习惯与嗜好：起居卫生习惯、饮食的规律与质量、饮酒嗜好、吸毒及其他异嗜物等
-4. 冶游史：有无不洁性交、淋病、尖锐湿疣、下疳等
-#### 1.1.7. 月经史 (menstrual history)
+
+1. 呼吸系统: 有无咳嗽、咳痰、咯血、胸痛、呼吸困难等
+2. 循环系统: 有无胸痛、心悸、胸闷、呼吸困难、水肿等。心前区疼痛的性质、程度、出现和持续时间, 放射部位、发作诱因和缓解方法。心悸的发生时间与诱因
+3. 消化系统: 有无吞因困难、食欲、嗳气、返酸、恶心、呕吐、呕血、腹痛、腹泄、腹胀等。排便次数、粪便颜色、形状和量, 排便时有无腹痛或里急后重
+4. 泌尿系统: 有无水肿、多尿、少尿、夜尿增多、尿量、尿的颜色。有无尿潴留及尿失禁等
+5. 造血系统: 皮肤粘膜有无苍白、黄染、出血、瘀斑、血肿及淋巴结、肝、脾肿大、骨骼痛等
+6. 内分泌代谢系统: 有无怕热、多汗、乏力、畏寒、头痛、视力障碍、心悸、食欲变化、烦渴、多尿、水肿等。有无肌肉震颤及痉挛, 有无产后大出血
+7. 神经精神系统: 有无头痛、失眠、嗜睡、记忆力减退、意识障碍、晕厥、痉挛、瘫痪、视力障碍、感觉及运动异常、性格改变、感觉与定向障碍。精神状态、思维过程、智力、能力、自知力等
+8. 肌肉骨骼系统: 有无肢体麻木、疼痛、痉挛、萎缩、瘫痪等。有无关节肿痛、运动障碍、外伤、骨折、关节脱位、先天畸形等。
+
+#### 1.1.6.  个人史 (personal history) 
+
+1.  社会经历: 包括出生地、居住地、居留时间、受教育程度、经济生活、业余爱好等
+2. 职业及工作条件: 包括工种、劳动环境、对工业毒物的接触情况等
+3. 习惯与嗜好: 起居卫生习惯、饮食的规律与质量、饮酒嗜好、吸毒及其他异嗜物等
+4. 冶游史: 有无不洁性交、淋病、尖锐湿疣、下疳等
+#### 1.1.7. 月经史 (menstrual history) 
+
    <center>
 
-   ![Menstrual](https://dsm04pap003files.storage.live.com/y4mMhaSWA2viAevnLMd0iz_2coH4caINsrrVoawHvwevPjjoGrvXAJ0EZnCiH2QmF0fzJcNsYBzAfHRbWVXyGODH97egLG5XO_J9mkoTAYH1q9xYneqyKSlhwObSXvSURN-u_OC4fTsi-ZlRt29h3QexrdHfwADMLtlxUX1J-IL8NF-Yj_eyOuv_7dksilWvg_p?width=1007&height=498&cropmode=none)
+   ![Menstrual](https://dsm04pap003files.storage.live.com/y4mMhaSWA2viAevnLMd0iz_2coH4caINsrrVoawHvwevPjjoGrvXAJ0EZnCiH2QmF0fzJcNsYBzAfHRbWVXyGODH97egLG5XO_J9mkoTAYH1q9xYneqyKSlhwObSXvSURN-u_OC4fTsi-ZlRt29h3QexrdHfwADMLtlxUX1J-IL8NF-Yj_eyOuv_7dksilWvg_p?width=1007&height=498&cropmode=none) 
     女性健康状况的晴雨表
 
    </center>
 
-#### 1.1.8. 婚姻史 (marrital history)
+#### 1.1.8. 婚姻史 (marrital history) 
 
 - 未婚或已婚
 - 结婚年龄
 - 配偶健康状况
 - 夫妻关系等
-#### 1.1.9. 生育史 (childbearing history)
+
+#### 1.1.9. 生育史 (childbearing history) 
 
 1. 妊娠与生育次数
 2. 人工或自然流产次数
 3. 有无早产、死产、手术产、围产期感染
-4. 计划生育措施和避孕药的使用情况等(吃避孕药副作用会有蛋白尿)
+4. 计划生育措施和避孕药的使用情况等 (吃避孕药副作用会有蛋白尿) 
 5. 对男性病人也应询问是否患过影响生育的疾病
-#### 1.1.10. 家族史 (family history)
+
+#### 1.1.10. 家族史 (family history) 
 
 ***可与遗传、基因有关系也可能有与生活习惯的关系有关***
-1. 询问父母与兄弟、姐妹及子女的健康与疾病情况，特别应询问是否有与患者同样的疾病
-2. 有无与遗传有关的疾病，如白化病、血友病、糖尿病、高血压病、精神病等
-3. 对己经死亡的直系亲属要问明死因与年龄，某些遗传性疾病或涉及到其父母双方的亲属，也应了解
+
+1. 询问父母与兄弟、姐妹及子女的健康与疾病情况, 特别应询问是否有与患者同样的疾病
+2. 有无与遗传有关的疾病, 如白化病、血友病、糖尿病、高血压病、精神病等
+3. 对己经死亡的直系亲属要问明死因与年龄, 某些遗传性疾病或涉及到其父母双方的亲属, 也应了解
 
 ### 1.2. 问诊的技巧和注意事项
-##### 1.2.1. 技巧
-   - 和蔼，仪表端庄
-   - 保护病人隐私
-   - 语言通俗易懂，避免用医学术语
-   - 避免审问式、暗示性提问
 
-&nbsp; 
-: 暗示性：不能问什么什么地方不舒服，应该问有没有哪里不舒服
+##### 1.2.1. 技巧
+
+- 和蔼, 仪表端庄
+- 保护病人隐私
+- 语言通俗易懂, 避免用医学术语
+- 避免审问式、暗示性提问
+
+> 暗示性: 不能问什么什么地方不舒服, 应该问有没有哪里不舒服
 
 ##### 1.2.2. 注意事项
-   - 疾病演变的==时间概念==要非常清晰
-<font size = 4>
 
-&nbsp; 
-: **！要按照顺序去问！**
-: **问诊的思维相比医学知识更重要**
-</font>
+- 疾病演变的==时间概念==要非常清晰
 
-   - 注意疾病发生的背景
-   - 患者的心理 （ 适时调整问诊方式 ）
-   - **让病人陈述，不随意打断，但需引导**。对多话与唠叨者离题太远者应启发引导纳入正题和提问限定在主要问题上
-   - **危重病人或问诊过程中出现危症，先抢救**：对危重病人，问诊应简单扼要。可先从其知情人获得一部分，其余则待病人好转后补充
-   - **依法保护病人隐私，遵循对病人无心理伤害原则**
-   - **对他院转来的病情介绍和病例摘要==只作参考==**
-   - 应尽量回避在病例中出现与责任相关的内容
-     - 如患者近期发生车祸, 本次看病诉因车祸发生心绞痛, 医生不可在病史中写成 "车祸后心绞痛3个月", 稳妥的的表述应该是 "发作性胸痛3个月"。
-     - 对于涉及职业病、伤害等与法律或者赔偿有关的情况, 应注意相关人员提供病史的真实性。不要不加分析记录在病历上。对关键病史的真实性表示怀疑又无从查证时, 可以添加引号或者记录叙述人姓名。
+> **！要按照顺序去问！**
+> **问诊的思维相比医学知识更重要**
 
-故事例子：
+- 注意疾病发生的背景
+- 患者的心理 (适时调整问诊方式) 
+- **让病人陈述, 不随意打断, 但需引导**。对多话与唠叨者离题太远者应启发引导纳入正题和提问限定在主要问题上
+- **危重病人或问诊过程中出现危症, 先抢救**: 对危重病人, 问诊应简单扼要。可先从其知情人获得一部分, 其余则待病人好转后补充
+- **依法保护病人隐私, 遵循对病人无心理伤害原则**
+- **对他院转来的病情介绍和病例摘要==只作参考==**
+- 应尽量回避在病例中出现与责任相关的内容
+   - 如患者近期发生车祸, 本次看病诉因车祸发生心绞痛, 医生不可在病史中写成 "车祸后心绞痛3个月", 稳妥的的表述应该是 "发作性胸痛3个月"。
+   - 对于涉及职业病、伤害等与法律或者赔偿有关的情况, 应注意相关人员提供病史的真实性。不要不加分析记录在病历上。对关键病史的真实性表示怀疑又无从查证时, 可以添加引号或者记录叙述人姓名。
 
-&nbsp; 
-: &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 马寅初夫人王仲贞 60 年代来协和就诊，她得了奇怪的病症，每次一感冒就发生休克，她曾到多家医院求诊，诊断不明。来到协和医院。
-&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 张孝骞教授一看到她就觉得似曾相识，在询问病史的交谈过程中得知这位患者 30 年前临产大出血曾在协和医院抢救，他把这段病史与患者目前的症状联系起来分析，考虑为==席汉综合征==：30年前的临产大出血，引起脑垂体坏死导致功能减退，造成甲状腺、肾上腺等激素分泌不足和应激反应的缺陷，故患者受到应激感染时就会发生休克。激素测定结果出来后，果然证实了他的推断。
+故事例子: 
 
-&nbsp; 
-: *PS*. 
-  体重下降，可能是天气变凉衣服穿的少捏，不一定就是甲亢之类的问题
+>马寅初夫人王仲贞 60 年代来协和就诊, 她得了奇怪的病症, 每次一感冒就发生休克, 她曾到多家医院求诊, 诊断不明。来到协和医院。
+> 张孝骞教授一看到她就觉得似曾相识, 在询问病史的交谈过程中得知这位患者 30 年前临产大出血曾在协和医院抢救, 他把这段病史与患者目前的症状联系起来分析, 考虑为==席汉综合征==: 30年前的临产大出血, 引起脑垂体坏死导致功能减退, 造成甲状腺、肾上腺等激素分泌不足和应激反应的缺陷, 故患者受到应激感染时就会发生休克。激素测定结果出来后, 果然证实了他的推断。
+
+> ***PS***
+> 体重下降, 可能是天气变凉衣服穿的少捏, 不一定就是甲亢之类的问题
 
 <br/>
----
 
 ## 2. 常见症状
-   区分症状和疾病
 
----
+区分症状和疾病
 
-## 3. 体格检查 (physical examination)
+## 3. 体格检查 (physical examination) 
+
 ***是医生用自己的感官或传统的辅助器具对患者进行系统的观察和检查***
+
 - 系统、全面、不遗漏
 - 简单、无创、可重复
 - 绝非贵重检查可替代
 <center>
 
-![PhysicalExamination](https://dsm04pap003files.storage.live.com/y4mDjQHjJaANAaspM1gHgsjw6I_UxM38oIRV8RL1nTmEXjvadXqFGVUmSGFohoZBgAu1LKFPcnKWBuoswPH-pfXm0VRANttWMWtvclcXyKsa6IT1bLXGdIu4mfXxQ5xjI08VTLn5WmDFP1ikwF4ccNFPyOVgt8EQL9ynzaKsZ_6bTrlxJ-5yuxwqBL4dMLHnq6b?width=695&height=186&cropmode=none)
-要注意是否准备齐全   ==**考**==
+![PhysicalExamination](https://dsm04pap003files.storage.live.com/y4mDjQHjJaANAaspM1gHgsjw6I_UxM38oIRV8RL1nTmEXjvadXqFGVUmSGFohoZBgAu1LKFPcnKWBuoswPH-pfXm0VRANttWMWtvclcXyKsa6IT1bLXGdIu4mfXxQ5xjI08VTLn5WmDFP1ikwF4ccNFPyOVgt8EQL9ynzaKsZ_6bTrlxJ-5yuxwqBL4dMLHnq6b?width=695&height=186&cropmode=none) 
+要注意是否准备齐全   ==考==
 </center>
 
 ### 3.1. 基本方法
-#### 3.1.1. 视诊 (inspection)
-   - **用眼睛观察病人全身或局部表现**
-      - 光线适宜，角度恰当，充分暴露
-      - 内容全面，认真细致，避免粗枝大叶
-      - 重视经验的积累，但避免先入为主
-      - 注意病人感受
-    - 常见症状：
-      - 巩膜黄染
-        -  注意需要双眼颜色一样黄
-      - 颈静脉怒张
-        - 心脏问题
-      - 牙痛
-        -  一般的炎症的牙疼是一直疼的，时疼时不疼可能怀疑关节掉了捏
+
+#### 3.1.1. 视诊 (inspection) 
+
+- **用眼睛观察病人全身或局部表现**
+   - 光线适宜, 角度恰当, 充分暴露
+   - 内容全面, 认真细致, 避免粗枝大叶
+   - 重视经验的积累, 但避免先入为主
+   - 注意病人感受
+- 常见症状: 
+   - 巩膜黄染
+      -  注意需要双眼颜色一样黄
+   - 颈静脉怒张
+      - 心脏问题
+   - 牙痛
+      -  一般的炎症的牙疼是一直疼的, 时疼时不疼可能怀疑关节掉了捏
+
 #### 3.1.2. 触诊
+
 ##### 3.1.2.1. 方法
-   1. 浅部触诊法（light palpation）
-      - 将一手放在被检查部位，用==掌指关节==和==腕关节==的协同动作以==旋转==或==滑动==方式轻压触摸
-      - 适用于体表浅在病变（关节、软组织、浅部动静脉等）的检查和评估。浅部触诊法可触及的深度约为1、2cm
-      - 用于检查腹部有无压痛、抵抗感、搏动、包块和某些肿大脏器等
-         : PS. 
-         乳房触诊注意顺序
+
+1. 浅部触诊法（light palpation）
+   - 将一手放在被检查部位, 用==掌指关节==和==腕关节==的协同动作以==旋转==或==滑动==方式轻压触摸
+   - 适用于体表浅在病变（关节、软组织、浅部动静脉等）的检查和评估。浅部触诊法可触及的深度约为1、2cm
+   - 用于检查腹部有无压痛、抵抗感、搏动、包块和某些肿大脏器等
+      : PS. 
+      乳房触诊注意顺序
 
          <center>
 
-         ![Titis](https://dsm04pap003files.storage.live.com/y4mUVhfBiyyHhrYV4CJYrNAKF_UjDqwgkyOpV2j5OUKspA7efcy9rvFC64JExBx5GHk5ioJfrzS5XOBlQrH33ohLf_xGd8vst-vJu_WQrKDcx7tL9NvZ0mWAzjBBEWLZyHUwyS6p4UFndvIRuea6wpTpM2SMKz5OLz8UZBOCzbWa6U5R_dkhVwg5ZjdgoVv0ttt?width=270&height=252&cropmode=none)
+         ![Titis](https://dsm04pap003files.storage.live.com/y4mUVhfBiyyHhrYV4CJYrNAKF_UjDqwgkyOpV2j5OUKspA7efcy9rvFC64JExBx5GHk5ioJfrzS5XOBlQrH33ohLf_xGd8vst-vJu_WQrKDcx7tL9NvZ0mWAzjBBEWLZyHUwyS6p4UFndvIRuea6wpTpM2SMKz5OLz8UZBOCzbWa6U5R_dkhVwg5ZjdgoVv0ttt?width=270&height=252&cropmode=none) 
 
          </center>
 
-   2. 深部触诊法 （ deep palpation ）
-      - 检查时可用单手或两手，由浅入深，逐渐加压以达到深部触诊的目的
-      - 深部触诊法可触及的深度多在 2cm 以上，可达 4、5cm，主要用于检查腹腔病变和脏器情况
-      - 根据检查目的和手法不同可分为以下几种
-  
-   3. 双手触诊法 ： 
-      - 将左手掌置于被检查脏器或包块的背后部，向右手方向托起，有利于右手触诊检查。用于肝、脾、肾和腹腔肿物的检查
-
-   4. 胆囊触诊法
-      - 患者取仰卧位，腹壁放松，检查者以左手掌平放于患者右肋下部，以拇指指腹勾压于右肋下胆囊点处，然后嘱患者缓慢深吸气，在吸气过程中发炎的胆囊下移时碰到用力按压的拇指，即可引起疼痛，此为胆囊触痛。 如因剧烈疼痛而致吸气中止称胆囊触痛征阳性，又称==莫菲(Murphy)征==阳性。 常见于急性胆囊炎。
-
-   5. 冲击触诊法
-      *不建议做了*
+2. 深部触诊法 (deep palpation) 
+   - 检查时可用单手或两手, 由浅入深, 逐渐加压以达到深部触诊的目的
+   - 深部触诊法可触及的深度多在 2cm 以上, 可达 4、5cm, 主要用于检查腹腔病变和脏器情况
+   - 根据检查目的和手法不同可分为以下几种
+3. 双手触诊法: 
+   - 将左手掌置于被检查脏器或包块的背后部, 向右手方向托起, 有利于右手触诊检查。用于肝、脾、肾和腹腔肿物的检查
+4. 胆囊触诊法
+   - 患者取仰卧位, 腹壁放松, 检查者以左手掌平放于患者右肋下部, 以拇指指腹勾压于右肋下胆囊点处, 然后嘱患者缓慢深吸气, 在吸气过程中发炎的胆囊下移时碰到用力按压的拇指, 即可引起疼痛, 此为胆囊触痛。 如因剧烈疼痛而致吸气中止称胆囊触痛征阳性, 又称==莫菲 (Murphy) 征==阳性。 常见于急性胆囊炎。
+5. 冲击触诊法
+   *不建议做了*
 
 ##### 3.1.2.2. 注意事项
+
    1. 腹部检查前应排空尿液
    2. 被检查部位要松弛
    3. 手法轻柔
@@ -222,108 +237,103 @@
    5. 观察病人表情
    6.  边检查边思考
 
-#### 3.1.3. 叩诊 (percussion)
-***是用手指叩击身体表面某一部位 ， 使之震动而产生音响 ，根据震动和声响的特点来判断被检查部位的脏器状态有无异常的一种方法***
+#### 3.1.3. 叩诊 (percussion) 
+
+***是用手指叩击身体表面某一部位, 使之震动而产生音响 , 根据震动和声响的特点来判断被检查部位的脏器状态有无异常的一种方法***
 ##### 3.1.3.1. 方法 
-   1. 直接叩诊法 （ direct percussion ） 医师右手中间三手指并拢 ，掌面直接拍击被检部位的叩诊法 。 适用于胸 、 腹部范围较广泛的病变 ， 如胸膜粘连或增厚 、 大量胸水或腹水及气胸等 。
-   2. 间接叩诊法 （ indirect percussion ）
-      <center>
 
-      ![indirect](https://dsm04pap003files.storage.live.com/y4mHW98srGR2Eip77_eX1606RRyEdOULlZPY_8ZcIaB1cCQ6jWA8oBhCoCzwVwP_rO-m2SgqDK2aCBXB9UzhQd2ftJ_NOPhNlc733QdtG8XOihhexw13Vw9pBa0rgCJ7MrEh3QjL5NkUtNTTychZ84BhEVJMfNAe6IcE16MXKoJ4zm-5txysX4DcBmvUiMvVVjx?width=468&height=397&cropmode=none)
-      </center>
-      
-      - 将左手中指==第二指节==紧贴于叩诊部位；其它手指==抬起==
-      - 右手中指==指端==叩击左手==中指末端指关节处==或==第二节指骨远端==
-      - 叩击方向与叩诊部位的体表==垂直==
-      - 以==腕关节与掌指关节==的活动为主，避免肘和肩关节参与运动
-      - 叩击动作要灵活、短促、富有弹性；叩击力量均匀稳定
-      - 叩击后右手中指应==立即==抬起，以免影响对叩诊音的判断
-      - 在同一部位叩诊可连续叩击==2~3==下，避免连续快速叩击
-      - 双侧==对比==
-
-##### 3.1.3.2. 叩诊音的种类和性质
-***由于人体被叩击部位的组织或器官的弹性、含气量以及距离体表深浅不一，可产生不同的叩诊音：清音、浊音、实音、鼓音、过清音***
+1. 直接叩诊法 (direct percussion)  医师右手中间三手指并拢 , 掌面直接拍击被检部位的叩诊法 。 适用于胸, 腹部范围较广泛的病变, 如胸膜粘连或增厚, 大量胸水或腹水及气胸等 。
+2. 间接叩诊法 (indirect percussion) 
    <center>
 
-   ![percussion_1](https://dsm04pap003files.storage.live.com/y4mkFtAjYpDrZItm_N7uuuqP-DEr5PKfRRySglcHZONLXCR8t3Iq-7li5Eibk2g2RqrR2dK08j2O9eVU0Zms4ji0aUZ2dznDpuF3q9D42ZLxSYcs7QrieWS0uIcq_eWgVXvo5IY093BcHQ2dFLvihHB-Sf9yaYlFrnmliu9TLRkPoHNOzZlvBDpcrMYfJL3LY1L?width=686&height=307&cropmode=none)
+   ![indirect](https://dsm04pap003files.storage.live.com/y4mHW98srGR2Eip77_eX1606RRyEdOULlZPY_8ZcIaB1cCQ6jWA8oBhCoCzwVwP_rO-m2SgqDK2aCBXB9UzhQd2ftJ_NOPhNlc733QdtG8XOihhexw13Vw9pBa0rgCJ7MrEh3QjL5NkUtNTTychZ84BhEVJMfNAe6IcE16MXKoJ4zm-5txysX4DcBmvUiMvVVjx?width=468&height=397&cropmode=none) 
+   </center>
+      
+- 将左手中指==第二指节==紧贴于叩诊部位；其它手指==抬起==
+- 右手中指==指端==叩击左手==中指末端指关节处==或==第二节指骨远端==
+- 叩击方向与叩诊部位的体表==垂直==
+- 以==腕关节与掌指关节==的活动为主, 避免肘和肩关节参与运动
+- 叩击动作要灵活、短促、富有弹性；叩击力量均匀稳定
+- 叩击后右手中指应==立即==抬起, 以免影响对叩诊音的判断
+- 在同一部位叩诊可连续叩击==2~3==下, 避免连续快速叩击
+- 双侧==对比==
 
-   ![precussion_2](https://dsm04pap003files.storage.live.com/y4mJiwEmDipSltunRs3Uf60B6-NN44lZ-g6yXpYYILwBV7tVRFkZ4OxskN2IQloj4Ems7H-uR2vb81OaS_eTzjq2LZIutIFQpS6Fb3UfPDWl1kaRCpRV1wKfgpuQ5M0NPF9QSlvkv61Ar8UtCzTA3_fy6zxxS_SMf48Z3wsQUypPSD0YFhmJpnPprRsm9CO3XWE?width=727&height=278&cropmode=none)
+##### 3.1.3.2. 叩诊音的种类和性质
+
+***由于人体被叩击部位的组织或器官的弹性、含气量以及距离体表深浅不一, 可产生不同的叩诊音: 清音、浊音、实音、鼓音、过清音***
+
+   <center>
+
+   ![percussion_1](https://dsm04pap003files.storage.live.com/y4mkFtAjYpDrZItm_N7uuuqP-DEr5PKfRRySglcHZONLXCR8t3Iq-7li5Eibk2g2RqrR2dK08j2O9eVU0Zms4ji0aUZ2dznDpuF3q9D42ZLxSYcs7QrieWS0uIcq_eWgVXvo5IY093BcHQ2dFLvihHB-Sf9yaYlFrnmliu9TLRkPoHNOzZlvBDpcrMYfJL3LY1L?width=686&height=307&cropmode=none) 
+
+   ![precussion_2](https://dsm04pap003files.storage.live.com/y4mJiwEmDipSltunRs3Uf60B6-NN44lZ-g6yXpYYILwBV7tVRFkZ4OxskN2IQloj4Ems7H-uR2vb81OaS_eTzjq2LZIutIFQpS6Fb3UfPDWl1kaRCpRV1wKfgpuQ5M0NPF9QSlvkv61Ar8UtCzTA3_fy6zxxS_SMf48Z3wsQUypPSD0YFhmJpnPprRsm9CO3XWE?width=727&height=278&cropmode=none) 
    </center>
 
-#### 3.1.4. 听诊 (auscultation)
+#### 3.1.4. 听诊 (auscultation) 
 
 ##### 3.1.4.1. 方法
-  1. 直接听诊法 （ direct auscultation ） ： 将耳直接贴于体壁进行听诊
-  2. 间接听诊法 （ indirect auscultation ） ： 用听诊器听诊 。 用于心 、 肺 、 腹的听诊外 ， 还可用于血管音 、 皮下气肿音 、骨折面摩擦音等的听诊
+
+1. 直接听诊法 (direct auscultation) : 将耳直接贴于体壁进行听诊
+2. 间接听诊法 (indirect auscultation) : 用听诊器听诊 。 用于心, 肺, 腹的听诊外, 还可用于血管音, 皮下气肿音 、骨折面摩擦音等的听诊
 
 ##### 3.1.4.2. 注意事项
-   - 胸件选择和放置：模型胸件紧贴被检部位皮肤，对高频声音敏感；钟型胸件轻置于被检部位皮肤，对低频声音敏感
-   - 双侧对比
-   - 全神贯注，边听诊边思考
+- 胸件选择和放置: 模型胸件紧贴被检部位皮肤, 对高频声音敏感；钟型胸件轻置于被检部位皮肤, 对低频声音敏感
+- 双侧对比
+- 全神贯注, 边听诊边思考
 
-#### 3.1.5. 嗅诊 (olfactory examination)
+#### 3.1.5. 嗅诊 (olfactory examination) 
+
 ***是通过嗅觉来判断发自病人的异常气味与疾病之间关系的一种方法 。***
 
-&nbsp;
-: **e.g.** 
-**尿毒症 ； 有机磷中毒 ； 肝硬化**
+> **e.g.** 
+> **尿毒症 ； 有机磷中毒 ； 肝硬化**
 
-### 3.2. 体检注意事项：
+### 3.2. 体检注意事项: 
+
 1. 站病人右侧
-2. 体现人文关怀：自我介绍、简短交谈
-3. 避免交叉感染：洗手，消毒手
-4. 用自然光，环境应温暖，安静
-5. 被检查部位充分暴露，未被检查部位适当遮盖
-6. 全身体格检查应全面、系统，重点突出
+2. 体现人文关怀: 自我介绍、简短交谈
+3. 避免交叉感染: 洗手, 消毒手
+4. 用自然光, 环境应温暖, 安静
+5. 被检查部位充分暴露, 未被检查部位适当遮盖
+6. 全身体格检查应全面、系统, 重点突出
 7. 建立规范的检查顺序
-8. 注意对照检查：左右，历史对照
-9. 手法规范，结果准确
+8. 注意对照检查: 左右, 历史对照
+9. 手法规范, 结果准确
 
 ### 3.3. 查体顺序
 
-***顺序不一定要按照这里的顺序，但是一定不能缺项漏项***
+***顺序不一定要按照这里的顺序, 但是一定不能缺项漏项***
 
-- **卧位**：一般情况和生命体征→头颈部→前、侧胸部（心、肺）患者取坐位后背部（包括肺、脊柱、肾区、骶部）卧位腹部→上、下肢→肛门直肠→外生殖器→神经系统（最后站立位）
-- **坐位**：一般情况和生命体征→上肢→头颈部→后背部（包括肺、脊柱、肾区、骶部）患者取卧位前、侧胸部（心、肺）→腹部→下肢→肛门直肠→外生殖器→神经系统（最后站立位）
-
----
+- **卧位**: 一般情况和生命体征→头颈部→前、侧胸部（心、肺）患者取坐位后背部（包括肺、脊柱、肾区、骶部）卧位腹部→上、下肢→肛门直肠→外生殖器→神经系统（最后站立位）
+- **坐位**: 一般情况和生命体征→上肢→头颈部→后背部（包括肺、脊柱、肾区、骶部）患者取卧位前、侧胸部（心、肺）→腹部→下肢→肛门直肠→外生殖器→神经系统（最后站立位）
 
 ## 4. 体征
    - 关节红肿——无外伤史则怀疑痛风
-   - 颈静脉怒张——右心有问题(血液无法回到心脏)
+   - 颈静脉怒张——右心有问题 (血液无法回到心脏) 
    - 巩膜黄染
 
----
+## 5. 实验室检查 (laboratory examination) 
 
-## 5. 实验室检查(laboratory examination)
+## 6. 辅助检查 (assistant examination) 
 
----
-
-## 6. 辅助检查(assistant examination)
-
-**CT等**
+**CT等**: 
 
 <center>
 
-![base64MRA](https://dsm04pap003files.storage.live.com/y4mVaUbBCudquiBsvPiYSfyeJYBvEO91cklQWvfUOcAAXbhfwyROQZ0b-l0_PEjQo22O5jC4qxtM5vw1yNNE4X8JdVQnRK3McBe_J3RepRpVCkKWAlMyIW9u2K_o-rOVPBCY8f6GxfzLc1qRmZwRpSnXt35FT5EfaewwdLGInLtWaVFAydJ7GQdhree_0aw_mOz?width=1072&height=668&cropmode=none)
+![base64MRA](https://dsm04pap003files.storage.live.com/y4mVaUbBCudquiBsvPiYSfyeJYBvEO91cklQWvfUOcAAXbhfwyROQZ0b-l0_PEjQo22O5jC4qxtM5vw1yNNE4X8JdVQnRK3McBe_J3RepRpVCkKWAlMyIW9u2K_o-rOVPBCY8f6GxfzLc1qRmZwRpSnXt35FT5EfaewwdLGInLtWaVFAydJ7GQdhree_0aw_mOz?width=1072&height=668&cropmode=none) 
 这是肾动脉狭窄引起的高血压
 </center>
 
----
-
 ## 7. 基因诊断
-分析某一特定基因的结构(DNA水平)或功能(RNA水平)是否正常，可助==诊断、检测==疾病
-
----
+分析某一特定基因的结构 (DNA水平) 或功能 (RNA水平) 是否正常, 可助==诊断、检测==疾病
 
 ## 8. 临床思维的重要性
 
----
-
 ## 9.  病历书写的重要性
+
 - 规定的时间、格式、内容
 - 对正确诊治、防止医疗差错事故至关重要
-- 保护病人及医生利益，是法律文书，为医疗诉讼或者解决医疗纠纷的依据
+- 保护病人及医生利益, 是法律文书, 为医疗诉讼或者解决医疗纠纷的依据
 
 <br/>
 
