--- a/Diagnostics/1 《绪论、问诊、基本检查法》.md
+++ b/Diagnostics/1 《绪论、问诊、基本检查法》.md
@@ -1,4 +1,41 @@
-# 绪论
+- [1. 病史采集 (hitstory taking)](#1-病史采集-hitstory-taking)
+  - [1.1. 内容纲要](#11-内容纲要)
+    - [1.1.1. 一般项目 (general data)](#111-一般项目-general-data)
+    - [1.1.2. 主诉 (chief complaints)](#112-主诉-chief-complaints)
+    - [1.1.3. 现病史 (history of present illness)](#113-现病史-history-of-present-illness)
+    - [1.1.4. 既往史 (past history)](#114-既往史-past-history)
+    - [1.1.5. 系统回顾 (review of systems)](#115-系统回顾-review-of-systems)
+    - [1.1.6. 个人史 (personal history)](#116-个人史-personal-history)
+    - [1.1.7. 月经史 (menstrual history)](#117-月经史-menstrual-history)
+    - [1.1.8. 婚姻史 (marrital history)](#118-婚姻史-marrital-history)
+    - [1.1.9. 生育史 (childbearing history)](#119-生育史-childbearing-history)
+    - [1.1.10. 家族史 (family history)](#1110-家族史-family-history)
+  - [1.2. 问诊的技巧和注意事项](#12-问诊的技巧和注意事项)
+      - [1.2.0.1. 技巧](#1201-技巧)
+      - [1.2.0.2. 注意事项](#1202-注意事项)
+- [2. 常见症状](#2-常见症状)
+- [3. 体格检查 (physical examination)](#3-体格检查-physical-examination)
+  - [3.1. 基本方法](#31-基本方法)
+    - [3.1.1. 视诊 (inspection)](#311-视诊-inspection)
+    - [3.1.2. 触诊](#312-触诊)
+      - [3.1.2.1. 方法](#3121-方法)
+      - [3.1.2.2. 注意事项](#3122-注意事项)
+    - [3.1.3. 叩诊 (percussion)](#313-叩诊-percussion)
+      - [3.1.3.1. 方法](#3131-方法)
+      - [3.1.3.2. 叩诊音的种类和性质](#3132-叩诊音的种类和性质)
+    - [3.1.4. 听诊 (auscultation)](#314-听诊-auscultation)
+      - [3.1.4.1. 方法](#3141-方法)
+      - [3.1.4.2. 注意事项](#3142-注意事项)
+    - [3.1.5. 嗅诊 (olfactory examination)](#315-嗅诊-olfactory-examination)
+  - [3.2. 体检注意事项:](#32-体检注意事项)
+  - [3.3. 查体顺序](#33-查体顺序)
+- [4. 体征](#4-体征)
+- [5. 实验室检查 (laboratory examination)](#5-实验室检查-laboratory-examination)
+- [6. 辅助检查 (assistant examination)](#6-辅助检查-assistant-examination)
+- [7. 基因诊断](#7-基因诊断)
+- [8. 临床思维的重要性](#8-临床思维的重要性)
+- [9. 病历书写的重要性](#9-病历书写的重要性)
+
 
 ---
 
@@ -10,7 +47,7 @@
 
 ---
 
-## 1. 病史采集 (hitstory taking) 
+# 1. 病史采集 (hitstory taking) 
 
 - 什么时候起病? 有无诱因? 
 - 哪些表现? 
@@ -22,9 +59,9 @@
 - 用药后病情、副作用? 
 - 有没有其他疾病? 
 
-### 1.1. 内容纲要
+## 1.1. 内容纲要
 
-#### 1.1.1. 一般项目 (general data) 
+### 1.1.1. 一般项目 (general data) 
 
 - 姓名
 - 年龄——实足年龄, 不可以 "成人" 或者 "儿" 代替
@@ -39,7 +76,7 @@
 - 记录日期
 - 可靠程度
 
-#### 1.1.2. 主诉 (chief complaints) 
+### 1.1.2. 主诉 (chief complaints) 
 
 - 患者感受最主要的痛苦, 或最明显的症状或体征, 也就是本次就诊的主要原因以及患病到就诊的时间
 
@@ -51,11 +88,11 @@
 
 - 咽痛, 高热 2 天
 - 活动后心慌气短 2 年, 下肢浮肿 2 周余
-- - 畏寒, 发热, 右胸痛, 咳嗽 3 天
+- 畏寒, 发热, 右胸痛, 咳嗽 3 天
 - 多饮, 多食, 多尿, 消瘦 1 年
 - 体检发现 "高血压 10 年"
 
-#### 1.1.3. 现病史 (history of present illness) 
+### 1.1.3. 现病史 (history of present illness) 
 
 ***对主诉的扩展***
 
@@ -67,7 +104,7 @@
 6. 病情的发展与演变
 7. 病程中的一般情况: 病后到就诊前或入院前的精神, 体力, 体重, 食欲, 食量, 睡眠与大小便的情况
 
-#### 1.1.4.  既往史 (past history) 
+### 1.1.4. 既往史 (past history) 
 
 ***既往史中所患疾病可能一直持续到现在, 如高血压, 糖尿病, 高脂血症等, 但由于不是主诉的内容, 一般放在既往史中陈述 。***
 
@@ -77,7 +114,7 @@
 4. 预防接种史
 5. 食物, 药物过敏史
 
-#### 1.1.5.  系统回顾 (review of systems) 
+### 1.1.5. 系统回顾 (review of systems) 
 
 ***十个大项: 头颅五官、呼吸、心血管、消化、泌尿生殖、内分泌与代谢、造血、肌肉与骨关节、神经系统、精神状态***
 
@@ -90,13 +127,14 @@
 7. 神经精神系统: 有无头痛、失眠、嗜睡、记忆力减退、意识障碍、晕厥、痉挛、瘫痪、视力障碍、感觉及运动异常、性格改变、感觉与定向障碍。精神状态、思维过程、智力、能力、自知力等
 8. 肌肉骨骼系统: 有无肢体麻木、疼痛、痉挛、萎缩、瘫痪等。有无关节肿痛、运动障碍、外伤、骨折、关节脱位、先天畸形等。
 
-#### 1.1.6.  个人史 (personal history) 
+### 1.1.6. 个人史 (personal history) 
 
 1.  社会经历: 包括出生地、居住地、居留时间、受教育程度、经济生活、业余爱好等
 2. 职业及工作条件: 包括工种、劳动环境、对工业毒物的接触情况等
 3. 习惯与嗜好: 起居卫生习惯、饮食的规律与质量、饮酒嗜好、吸毒及其他异嗜物等
 4. 冶游史: 有无不洁性交、淋病、尖锐湿疣、下疳等
-#### 1.1.7. 月经史 (menstrual history) 
+
+### 1.1.7. 月经史 (menstrual history) 
 
    <center>
 
@@ -105,14 +143,14 @@
 
    </center>
 
-#### 1.1.8. 婚姻史 (marrital history) 
+### 1.1.8. 婚姻史 (marrital history) 
 
 - 未婚或已婚
 - 结婚年龄
 - 配偶健康状况
 - 夫妻关系等
 
-#### 1.1.9. 生育史 (childbearing history) 
+### 1.1.9. 生育史 (childbearing history) 
 
 1. 妊娠与生育次数
 2. 人工或自然流产次数
@@ -120,7 +158,7 @@
 4. 计划生育措施和避孕药的使用情况等 (吃避孕药副作用会有蛋白尿) 
 5. 对男性病人也应询问是否患过影响生育的疾病
 
-#### 1.1.10. 家族史 (family history) 
+### 1.1.10. 家族史 (family history) 
 
 ***可与遗传、基因有关系也可能有与生活习惯的关系有关***
 
@@ -128,9 +166,9 @@
 2. 有无与遗传有关的疾病, 如白化病、血友病、糖尿病、高血压病、精神病等
 3. 对己经死亡的直系亲属要问明死因与年龄, 某些遗传性疾病或涉及到其父母双方的亲属, 也应了解
 
-### 1.2. 问诊的技巧和注意事项
+## 1.2. 问诊的技巧和注意事项
 
-##### 1.2.1. 技巧
+#### 1.2.0.1. 技巧
 
 - 和蔼, 仪表端庄
 - 保护病人隐私
@@ -139,7 +177,7 @@
 
 > 暗示性: 不能问什么什么地方不舒服, 应该问有没有哪里不舒服
 
-##### 1.2.2. 注意事项
+#### 1.2.0.2. 注意事项
 
 - 疾病演变的==时间概念==要非常清晰
 
@@ -166,11 +204,11 @@
 
 <br/>
 
-## 2. 常见症状
+# 2. 常见症状
 
 区分症状和疾病
 
-## 3. 体格检查 (physical examination) 
+# 3. 体格检查 (physical examination) 
 
 ***是医生用自己的感官或传统的辅助器具对患者进行系统的观察和检查***
 
@@ -183,9 +221,9 @@
 要注意是否准备齐全   ==考==
 </center>
 
-### 3.1. 基本方法
+## 3.1. 基本方法
 
-#### 3.1.1. 视诊 (inspection) 
+### 3.1.1. 视诊 (inspection) 
 
 - **用眼睛观察病人全身或局部表现**
    - 光线适宜, 角度恰当, 充分暴露
@@ -200,9 +238,9 @@
    - 牙痛
       -  一般的炎症的牙疼是一直疼的, 时疼时不疼可能怀疑关节掉了捏
 
-#### 3.1.2. 触诊
+### 3.1.2. 触诊
 
-##### 3.1.2.1. 方法
+#### 3.1.2.1. 方法
 
 1. 浅部触诊法（light palpation）
    - 将一手放在被检查部位, 用==掌指关节==和==腕关节==的协同动作以==旋转==或==滑动==方式轻压触摸
@@ -211,11 +249,11 @@
       : PS. 
       乳房触诊注意顺序
 
-         <center>
+<center>
 
-         ![Titis](https://dsm04pap003files.storage.live.com/y4mUVhfBiyyHhrYV4CJYrNAKF_UjDqwgkyOpV2j5OUKspA7efcy9rvFC64JExBx5GHk5ioJfrzS5XOBlQrH33ohLf_xGd8vst-vJu_WQrKDcx7tL9NvZ0mWAzjBBEWLZyHUwyS6p4UFndvIRuea6wpTpM2SMKz5OLz8UZBOCzbWa6U5R_dkhVwg5ZjdgoVv0ttt?width=270&height=252&cropmode=none) 
+![Titis](https://dsm04pap003files.storage.live.com/y4mUVhfBiyyHhrYV4CJYrNAKF_UjDqwgkyOpV2j5OUKspA7efcy9rvFC64JExBx5GHk5ioJfrzS5XOBlQrH33ohLf_xGd8vst-vJu_WQrKDcx7tL9NvZ0mWAzjBBEWLZyHUwyS6p4UFndvIRuea6wpTpM2SMKz5OLz8UZBOCzbWa6U5R_dkhVwg5ZjdgoVv0ttt?width=270&height=252&cropmode=none) 
 
-         </center>
+</center>
 
 2. 深部触诊法 (deep palpation) 
    - 检查时可用单手或两手, 由浅入深, 逐渐加压以达到深部触诊的目的
@@ -228,19 +266,19 @@
 5. 冲击触诊法
    *不建议做了*
 
-##### 3.1.2.2. 注意事项
+#### 3.1.2.2. 注意事项
 
-   1. 腹部检查前应排空尿液
-   2. 被检查部位要松弛
-   3. 手法轻柔
-   4. 从无病部位到有病部位
-   5. 观察病人表情
-   6.  边检查边思考
+1. 腹部检查前应排空尿液
+2. 被检查部位要松弛
+3. 手法轻柔
+4. 从无病部位到有病部位
+5. 观察病人表情
+6.  边检查边思考
 
-#### 3.1.3. 叩诊 (percussion) 
+### 3.1.3. 叩诊 (percussion) 
 
 ***是用手指叩击身体表面某一部位, 使之震动而产生音响 , 根据震动和声响的特点来判断被检查部位的脏器状态有无异常的一种方法***
-##### 3.1.3.1. 方法 
+#### 3.1.3.1. 方法 
 
 1. 直接叩诊法 (direct percussion)  医师右手中间三手指并拢 , 掌面直接拍击被检部位的叩诊法 。 适用于胸, 腹部范围较广泛的病变, 如胸膜粘连或增厚, 大量胸水或腹水及气胸等 。
 2. 间接叩诊法 (indirect percussion) 
@@ -258,7 +296,7 @@
 - 在同一部位叩诊可连续叩击==2~3==下, 避免连续快速叩击
 - 双侧==对比==
 
-##### 3.1.3.2. 叩诊音的种类和性质
+#### 3.1.3.2. 叩诊音的种类和性质
 
 ***由于人体被叩击部位的组织或器官的弹性、含气量以及距离体表深浅不一, 可产生不同的叩诊音: 清音、浊音、实音、鼓音、过清音***
 
@@ -269,26 +307,27 @@
    ![precussion_2](https://dsm04pap003files.storage.live.com/y4mJiwEmDipSltunRs3Uf60B6-NN44lZ-g6yXpYYILwBV7tVRFkZ4OxskN2IQloj4Ems7H-uR2vb81OaS_eTzjq2LZIutIFQpS6Fb3UfPDWl1kaRCpRV1wKfgpuQ5M0NPF9QSlvkv61Ar8UtCzTA3_fy6zxxS_SMf48Z3wsQUypPSD0YFhmJpnPprRsm9CO3XWE?width=727&height=278&cropmode=none) 
    </center>
 
-#### 3.1.4. 听诊 (auscultation) 
+### 3.1.4. 听诊 (auscultation) 
 
-##### 3.1.4.1. 方法
+#### 3.1.4.1. 方法
 
 1. 直接听诊法 (direct auscultation) : 将耳直接贴于体壁进行听诊
 2. 间接听诊法 (indirect auscultation) : 用听诊器听诊 。 用于心, 肺, 腹的听诊外, 还可用于血管音, 皮下气肿音 、骨折面摩擦音等的听诊
 
-##### 3.1.4.2. 注意事项
+#### 3.1.4.2. 注意事项
+
 - 胸件选择和放置: 模型胸件紧贴被检部位皮肤, 对高频声音敏感；钟型胸件轻置于被检部位皮肤, 对低频声音敏感
 - 双侧对比
 - 全神贯注, 边听诊边思考
 
-#### 3.1.5. 嗅诊 (olfactory examination) 
+### 3.1.5. 嗅诊 (olfactory examination) 
 
 ***是通过嗅觉来判断发自病人的异常气味与疾病之间关系的一种方法 。***
 
 > **e.g.** 
 > **尿毒症 ； 有机磷中毒 ； 肝硬化**
 
-### 3.2. 体检注意事项: 
+## 3.2. 体检注意事项: 
 
 1. 站病人右侧
 2. 体现人文关怀: 自我介绍、简短交谈
@@ -300,21 +339,21 @@
 8. 注意对照检查: 左右, 历史对照
 9. 手法规范, 结果准确
 
-### 3.3. 查体顺序
+## 3.3. 查体顺序
 
 ***顺序不一定要按照这里的顺序, 但是一定不能缺项漏项***
 
 - **卧位**: 一般情况和生命体征→头颈部→前、侧胸部（心、肺）患者取坐位后背部（包括肺、脊柱、肾区、骶部）卧位腹部→上、下肢→肛门直肠→外生殖器→神经系统（最后站立位）
 - **坐位**: 一般情况和生命体征→上肢→头颈部→后背部（包括肺、脊柱、肾区、骶部）患者取卧位前、侧胸部（心、肺）→腹部→下肢→肛门直肠→外生殖器→神经系统（最后站立位）
 
-## 4. 体征
+# 4. 体征
    - 关节红肿——无外伤史则怀疑痛风
    - 颈静脉怒张——右心有问题 (血液无法回到心脏) 
    - 巩膜黄染
 
-## 5. 实验室检查 (laboratory examination) 
+# 5. 实验室检查 (laboratory examination) 
 
-## 6. 辅助检查 (assistant examination) 
+# 6. 辅助检查 (assistant examination) 
 
 **CT等**: 
 
@@ -324,12 +363,12 @@
 这是肾动脉狭窄引起的高血压
 </center>
 
-## 7. 基因诊断
+# 7. 基因诊断
 分析某一特定基因的结构 (DNA水平) 或功能 (RNA水平) 是否正常, 可助==诊断、检测==疾病
 
-## 8. 临床思维的重要性
+# 8. 临床思维的重要性
 
-## 9.  病历书写的重要性
+# 9. 病历书写的重要性
 
 - 规定的时间、格式、内容
 - 对正确诊治、防止医疗差错事故至关重要
