--- a/Diagnostics/3 《胸肺检查》.md
+++ b/Diagnostics/3 《胸肺检查》.md
@@ -75,27 +75,30 @@
 - <u>胸骨线 (左、右) </u>: 为沿胸骨边缘的垂直线。
 - <u>胸骨旁线 (左、右) </u>: 为胸骨线和锁骨中线中间的垂直线。
 
-    <center>
+<center>
 
-    ![clavicle](https://dsm04pap003files.storage.live.com/y4mT4RsE_9y93xr5kzHf3Wn7_WXAHtcV062AeYCfdIhygmUSgJ-uhEcvJmDfFekAoKz7v1JboPK8e82cctAvvRXPSI9ba2KY_y48HgS-oRPtiov_Y7t0po22IIeItZGEjkJRgW8WYOQWCIXzlw_gOZEdfn-q2X0emBMNpDvzfm_YUagh-rMzFfmoQC1xWhnQYyA?width=262&height=277&cropmode=none)
-    </center>
+![clavicle](https://dsm04pap003files.storage.live.com/y4mT4RsE_9y93xr5kzHf3Wn7_WXAHtcV062AeYCfdIhygmUSgJ-uhEcvJmDfFekAoKz7v1JboPK8e82cctAvvRXPSI9ba2KY_y48HgS-oRPtiov_Y7t0po22IIeItZGEjkJRgW8WYOQWCIXzlw_gOZEdfn-q2X0emBMNpDvzfm_YUagh-rMzFfmoQC1xWhnQYyA?width=262&height=277&cropmode=none)
+
+</center>
 
 - <u>腋前线 (左、右) </u>: 为通过腋窝前皱襞沿前侧胸壁向下的垂直线。
 - <u>腋后线 (左、右) </u>: 为通过腋窝后皱襞沿后侧胸壁向下的垂直线。
 - <u>腋中线 (左、右) </u>: 为自腋窝顶端于腋前线和腋后线之间向下的垂直线。
 
-    <center>
+<center>
 
-    ![Armpit](https://dsm04pap003files.storage.live.com/y4mVce0ksRG_vj-mlXtvFpEKKAvmWlAmID1EbMY2C8GwEpdS46o1JpuOYG4ipxPoSd2ESMm0LOOwSPPj5m7zg6l7qbal39qR83dRw3sWXISt34f13JmV_UAGfphnpSpzs_9WF4qdEnuyKkQj4yT_zTa0Do9wcVL4qxR3Dk5psYQFNAjvrfLflrNcxkeQF-fEfc6?width=193&height=258&cropmode=none)
-    </center>
+![Armpit](https://dsm04pap003files.storage.live.com/y4mVce0ksRG_vj-mlXtvFpEKKAvmWlAmID1EbMY2C8GwEpdS46o1JpuOYG4ipxPoSd2ESMm0LOOwSPPj5m7zg6l7qbal39qR83dRw3sWXISt34f13JmV_UAGfphnpSpzs_9WF4qdEnuyKkQj4yT_zTa0Do9wcVL4qxR3Dk5psYQFNAjvrfLflrNcxkeQF-fEfc6?width=193&height=258&cropmode=none)
+
+</center>
 
 - <u>肩胛线 (左、右) </u>: 为双臂下垂时通过肩胛下角与脊柱平行的垂直线。
 - <u>后正中线即脊柱中线</u>: 为通过椎骨棘突, 或沿脊柱正中下行的垂直线。
 
-    <center>
+<center>
 
-    ![scapular](https://dsm04pap003files.storage.live.com/y4m_fR7HbWoXQ47jYUQb4LmQbxr0X5gatIeEknmSYqvbDCdM3HQMSqXpmr0eO78mzqMTBVAwXo5BLMUd8brWMYa7RHXjHwkPabshsK8N-bGPTNs6quUGEHshIIy0mqBJ8HeSMVQa2ZknTvaqM8bTAz_fRndwSVyoBINkxgnOFClFm0IZV2ba4I_vHYYpMlb9Etj?width=268&height=291&cropmode=none)
-    </center>
+![scapular](https://dsm04pap003files.storage.live.com/y4m_fR7HbWoXQ47jYUQb4LmQbxr0X5gatIeEknmSYqvbDCdM3HQMSqXpmr0eO78mzqMTBVAwXo5BLMUd8brWMYa7RHXjHwkPabshsK8N-bGPTNs6quUGEHshIIy0mqBJ8HeSMVQa2ZknTvaqM8bTAz_fRndwSVyoBINkxgnOFClFm0IZV2ba4I_vHYYpMlb9Etj?width=268&height=291&cropmode=none)
+
+</center>
 
 ## 1.3. 胸部分区: 7窝6区
 
@@ -111,19 +114,20 @@
 - 左肺分叶的胸壁投影界线: 上, 下两叶分界线始于第三胸椎, 向外下方斜行, 至侧脚壁腋后线与第四肋骨相交, 再下延到第六肋骨与肋软骨连接处。分为上、下两叶。
 - 右肺分叶的胸壁投影分界线, 右肺上中两叶与下叶之分界与左胸上、下两叶之分界相同。上、中两叶之分界线, 起自腋后线第四肋骨处到胸骨右缘。
 
-    <center>
+<center>
 
-    ![lung](https://dsm04pap003files.storage.live.com/y4m5hNcN9NQUoU8YFt84rBnBgCsKM-_eag1tPcyFPZTgu4H7PL36px26x0J0jFz3WXqkDzl5_baclhSmQsgg8Qio9nZly-6OQCFsbrDRiXgJ4U79thES7cPfI59pwsIMlSrMy5yoP5CfaB_cANag1cSZKqqvse_N9m7_fXc8XqR_IXphXUgVtvJU5IFv02G0m0j?width=566&height=232&cropmode=none)
-    </center>
+![lung](https://dsm04pap003files.storage.live.com/y4m5hNcN9NQUoU8YFt84rBnBgCsKM-_eag1tPcyFPZTgu4H7PL36px26x0J0jFz3WXqkDzl5_baclhSmQsgg8Qio9nZly-6OQCFsbrDRiXgJ4U79thES7cPfI59pwsIMlSrMy5yoP5CfaB_cANag1cSZKqqvse_N9m7_fXc8XqR_IXphXUgVtvJU5IFv02G0m0j?width=566&height=232&cropmode=none)
+
+</center>
 
 - ==气管==自颈前部正中沿==食管前方==下行进入胸廓内, 在==平胸骨角==即==胸椎4、5水平处==分为左、右主支气管分别进入左、右肺内。==右主支气管粗短而陡直==, 左主支气管细长而倾斜。右主支气管又分为3支, 分别进入右肺的上、中、下3个肺叶；左主支气管又分为2支, 分别进入左肺的上、下2个肺叶。以后各自再分支形成支气管、细支气管分别进入相应的肺段。每一呼吸性细支气管终末为一肺泡管, 由此再分出许多肺泡囊。
     - 气管粗细: 男性——2.0-2.5；女性——1.8-2.2
 - 肺下界: 前胸部的肺下界始于第6肋骨, 锁骨中线处达第6肋间隙, 至腋中线处达第8肋间隙。后胸壁的肺下界几乎呈一水平线, 于肩胛线处位于第10肋骨水平。
 
-    <center>
+<center>
 
-    ![lung_2]https://dsm04pap003files.storage.live.com/y4m736cBkxApUgVbu0vkVReEcYx8UB5U5Bp2rnNUz6qXg4sW7xedWTuquJ9Q-P1kLr7SkUyqt3KzsJ_hppWRQK3P8hmDcqV_rLhxZwY_YVJ2BwlWkS7sZeqObbl3ETanCNU5wy296ZbXRjI7EjuMaUSdVmTQ9ZBsMKo5W7iLjy1jSN7WPYp45YePN1h7Ic60ZLK?width=651&height=983&cropmode=none
-    </center>
+![lung_2](https://dsm04pap003files.storage.live.com/y4mrWDg3_cEmOCXHvp3Fv1Ep2REfh-uZb0gW8afyb5eh-b6otnB0L0PODPf5nB3-lHtLquKl2DW02R8Sh22BFG07RU5HzYBU8ekcDNw4tqfFaSK_F3IpXnKBvHWb4KdK0sDu-g9cb6rHyuKbai275xXNdsuhlAaT5vSGCX9YrKNxdiVRmMoVkhlcz772lLkG_5E?width=651&height=983&cropmode=none)
+</center>
 
 # 2. 胸壁、胸廓与乳房
 
