--- a/Diagnostics/1 《绪论、问诊、基本检查法》.md
+++ b/Diagnostics/1 《绪论、问诊、基本检查法》.md
@@ -36,7 +36,6 @@
 - [8. 临床思维的重要性](#8-临床思维的重要性)
 - [9. 病历书写的重要性](#9-病历书写的重要性)
 
-
 ---
 
 ***PS***
@@ -47,26 +46,26 @@
 
 ---
 
-# 1. 病史采集 (hitstory taking) 
+# 1. 病史采集 (hitstory taking)
 
-- 什么时候起病? 有无诱因? 
-- 哪些表现? 
-- 到那个医院看过病? 
-- 医生做了哪些检查、化验等? 
-- 医生给出的判断是什么? 
-- 用的什么药? 
-- 有没有按照医生的意见服药? 
-- 用药后病情、副作用? 
-- 有没有其他疾病? 
+- 什么时候起病?有无诱因?
+- 哪些表现?
+- 到那个医院看过病?
+- 医生做了哪些检查、化验等?
+- 医生给出的判断是什么?
+- 用的什么药?
+- 有没有按照医生的意见服药?
+- 用药后病情、副作用?
+- 有没有其他疾病?
 
 ## 1.1. 内容纲要
 
-### 1.1.1. 一般项目 (general data) 
+### 1.1.1. 一般项目 (general data)
 
 - 姓名
 - 年龄——实足年龄, 不可以 "成人" 或者 "儿" 代替
 - 民族
-- 籍贯——地区流行病 (市, 县, 不可以用省等的过于大的单位来描述) 
+- 籍贯——地区流行病 (市, 县, 不可以用省等的过于大的单位来描述)
 - 入院日期——危重者详细到分钟
 - 病史叙述者——病史陈述非本人者应注明与患者的关系
 - 性别
@@ -76,11 +75,11 @@
 - 记录日期
 - 可靠程度
 
-### 1.1.2. 主诉 (chief complaints) 
+### 1.1.2. 主诉 (chief complaints)
 
 - 患者感受最主要的痛苦, 或最明显的症状或体征, 也就是本次就诊的主要原因以及患病到就诊的时间
 
-**记录方式: 主要症状 + 部位 + 时间**
+> 记录方式: 主要症状 + 部位 + 时间
 
 - 尽量用病人描述的症状, 但若症状较复杂, 应结合整个病史归纳出能反应疾病特征的主诉
 
@@ -92,19 +91,19 @@
 - 多饮, 多食, 多尿, 消瘦 1 年
 - 体检发现 "高血压 10 年"
 
-### 1.1.3. 现病史 (history of present illness) 
+### 1.1.3. 现病史 (history of present illness)
 
 ***对主诉的扩展***
 
-1.  起病的情况及时间: 主要症状, 病因与诱因
+1. 起病的情况及时间: 主要症状, 病因与诱因
 2. 医生做的体检, 辅助检查
-3. 诊断 ? 
-4. 如何治疗 ?  用药 (包括药名, 剂量, 途径, 用药时间) 
-5. 疗效怎么样, 化验检查结果, 不良反应 ? 
+3. 诊断 ?
+4. 如何治疗 ? 用药 (包括药名, 剂量, 途径, 用药时间)
+5. 疗效怎么样, 化验检查结果, 不良反应 ?
 6. 病情的发展与演变
 7. 病程中的一般情况: 病后到就诊前或入院前的精神, 体力, 体重, 食欲, 食量, 睡眠与大小便的情况
 
-### 1.1.4. 既往史 (past history) 
+### 1.1.4. 既往史 (past history)
 
 ***既往史中所患疾病可能一直持续到现在, 如高血压, 糖尿病, 高脂血症等, 但由于不是主诉的内容, 一般放在既往史中陈述 。***
 
@@ -114,7 +113,7 @@
 4. 预防接种史
 5. 食物, 药物过敏史
 
-### 1.1.5. 系统回顾 (review of systems) 
+### 1.1.5. 系统回顾 (review of systems)
 
 ***十个大项: 头颅五官、呼吸、心血管、消化、泌尿生殖、内分泌与代谢、造血、肌肉与骨关节、神经系统、精神状态***
 
@@ -127,39 +126,35 @@
 7. 神经精神系统: 有无头痛、失眠、嗜睡、记忆力减退、意识障碍、晕厥、痉挛、瘫痪、视力障碍、感觉及运动异常、性格改变、感觉与定向障碍。精神状态、思维过程、智力、能力、自知力等
 8. 肌肉骨骼系统: 有无肢体麻木、疼痛、痉挛、萎缩、瘫痪等。有无关节肿痛、运动障碍、外伤、骨折、关节脱位、先天畸形等。
 
-### 1.1.6. 个人史 (personal history) 
+### 1.1.6. 个人史 (personal history)
 
-1.  社会经历: 包括出生地、居住地、居留时间、受教育程度、经济生活、业余爱好等
+1. 社会经历: 包括出生地、居住地、居留时间、受教育程度、经济生活、业余爱好等
 2. 职业及工作条件: 包括工种、劳动环境、对工业毒物的接触情况等
 3. 习惯与嗜好: 起居卫生习惯、饮食的规律与质量、饮酒嗜好、吸毒及其他异嗜物等
 4. 冶游史: 有无不洁性交、淋病、尖锐湿疣、下疳等
 
-### 1.1.7. 月经史 (menstrual history) 
+### 1.1.7. 月经史 (menstrual history)
 
-<center>
+![Menstrual](https://dsm04pap003files.storage.live.com/y4mKwlg4fF1UFNHRXoYwQPL6QQgKOhYau-mDxI7mX1ANENkGO5VhEyg8zE8gs8pwm-OhMhvvjHJTmrEZrT0TRmV28F8Y6TGsJ5e07kW0EoA0CUg4fIibSAbgIPHIrOx9_4VCHiyhJbXg5D1p7-UOFg-OLLA0o-NIRBMZ7kC2Q9Q5FcMzJutdkE4QxKxhZyNTF7O?width=1007&height=498&cropmode=none)
 
-![Menstrual](https://dsm04pap003files.storage.live.com/y4mKwlg4fF1UFNHRXoYwQPL6QQgKOhYau-mDxI7mX1ANENkGO5VhEyg8zE8gs8pwm-OhMhvvjHJTmrEZrT0TRmV28F8Y6TGsJ5e07kW0EoA0CUg4fIibSAbgIPHIrOx9_4VCHiyhJbXg5D1p7-UOFg-OLLA0o-NIRBMZ7kC2Q9Q5FcMzJutdkE4QxKxhZyNTF7O?width=1007&height=498&cropmode=none) 
+> 女性健康状况的晴雨表
 
-女性健康状况的晴雨表
-
-</center>
-
-### 1.1.8. 婚姻史 (marrital history) 
+### 1.1.8. 婚姻史 (marrital history)
 
 - 未婚或已婚
 - 结婚年龄
 - 配偶健康状况
 - 夫妻关系等
 
-### 1.1.9. 生育史 (childbearing history) 
+### 1.1.9. 生育史 (childbearing history)
 
 1. 妊娠与生育次数
 2. 人工或自然流产次数
 3. 有无早产、死产、手术产、围产期感染
-4. 计划生育措施和避孕药的使用情况等 (吃避孕药副作用会有蛋白尿) 
+4. 计划生育措施和避孕药的使用情况等 (吃避孕药副作用会有蛋白尿)
 5. 对男性病人也应询问是否患过影响生育的疾病
 
-### 1.1.10. 家族史 (family history) 
+### 1.1.10. 家族史 (family history)
 
 ***可与遗传、基因有关系也可能有与生活习惯的关系有关***
 
@@ -186,14 +181,14 @@
 > **问诊的思维相比医学知识更重要**
 
 - 注意疾病发生的背景
-- 患者的心理 (适时调整问诊方式) 
+- 患者的心理 (适时调整问诊方式)
 - **让病人陈述, 不随意打断, 但需引导**。对多话与唠叨者离题太远者应启发引导纳入正题和提问限定在主要问题上
 - **危重病人或问诊过程中出现危症, 先抢救**: 对危重病人, 问诊应简单扼要。可先从其知情人获得一部分, 其余则待病人好转后补充
 - **依法保护病人隐私, 遵循对病人无心理伤害原则**
 - **对他院转来的病情介绍和病例摘要==只作参考==**
 - 应尽量回避在病例中出现与责任相关的内容
-   - 如患者近期发生车祸, 本次看病诉因车祸发生心绞痛, 医生不可在病史中写成 "车祸后心绞痛3个月", 稳妥的的表述应该是 "发作性胸痛3个月"。
-   - 对于涉及职业病、伤害等与法律或者赔偿有关的情况, 应注意相关人员提供病史的真实性。不要不加分析记录在病历上。对关键病史的真实性表示怀疑又无从查证时, 可以添加引号或者记录叙述人姓名。
+  - 如患者近期发生车祸, 本次看病诉因车祸发生心绞痛, 医生不可在病史中写成 "车祸后心绞痛3个月", 稳妥的的表述应该是 "发作性胸痛3个月"。
+  - 对于涉及职业病、伤害等与法律或者赔偿有关的情况, 应注意相关人员提供病史的真实性。不要不加分析记录在病历上。对关键病史的真实性表示怀疑又无从查证时, 可以添加引号或者记录叙述人姓名。
 
 故事例子: 
 
@@ -209,7 +204,7 @@
 
 区分症状和疾病
 
-# 3. 体格检查 (physical examination) 
+# 3. 体格检查 (physical examination)
 
 ***是医生用自己的感官或传统的辅助器具对患者进行系统的观察和检查***
 
@@ -219,7 +214,7 @@
 
 <center>
 
-![PhysicalExamination](https://dsm04pap003files.storage.live.com/y4mwd74K8TgdWyPOk3kuTdFxU3YekDoDpSjyL5xIos3S98EY-quEgHG7DmumLrBBAPCIBVhpxKNRA9IFXG8fqgpRtJ7wVoy_VZHyKP3UCbpy6tBrPFWCpLTtNN559b4jxQ9Nx4Egx8BKYQevyalnwZjqoO2B24LveqUpK5hzlKBKMQGnYdFpeJ_0HGbJlZWJPM_?width=695&height=186&cropmode=none) 
+![PhysicalExamination](https://dsm04pap003files.storage.live.com/y4mwd74K8TgdWyPOk3kuTdFxU3YekDoDpSjyL5xIos3S98EY-quEgHG7DmumLrBBAPCIBVhpxKNRA9IFXG8fqgpRtJ7wVoy_VZHyKP3UCbpy6tBrPFWCpLTtNN559b4jxQ9Nx4Egx8BKYQevyalnwZjqoO2B24LveqUpK5hzlKBKMQGnYdFpeJ_0HGbJlZWJPM_?width=695&height=186&cropmode=none)
 
 要注意是否准备齐全   ==考==
 
@@ -227,7 +222,7 @@
 
 ## 3.1. 基本方法
 
-### 3.1.1. 视诊 (inspection) 
+### 3.1.1. 视诊 (inspection)
 
 - **用眼睛观察病人全身或局部表现**
    - 光线适宜, 角度恰当, 充分暴露
@@ -250,23 +245,23 @@
    - 将一手放在被检查部位, 用==掌指关节==和==腕关节==的协同动作以==旋转==或==滑动==方式轻压触摸
    - 适用于体表浅在病变（关节、软组织、浅部动静脉等）的检查和评估。浅部触诊法可触及的深度约为1、2cm
    - 用于检查腹部有无压痛、抵抗感、搏动、包块和某些肿大脏器等
-      : PS. 
+      : PS.
       乳房触诊注意顺序
 
 <center>
 
-![Titis](https://dsm04pap003files.storage.live.com/y4mtqvWdJ5eEcMl843iSw9lIX1GkQHFGwyR7iR_ZUxdapTd6nsZclw59BeQjzYEhWohkFu5zTFkVI77gDDtrXL4S-syrM5q85_-LsJUrS0wZQ5EbC7KJq6PNbf63MGL6BePXo8h6ApKbE6oKF75Lpauj7s44p2Rb0pMQi6wXLBFs3iFt-RwXJ7t6YD1SryZOjqQ?width=270&height=252&cropmode=none) 
+![Titis](https://dsm04pap003files.storage.live.com/y4mtqvWdJ5eEcMl843iSw9lIX1GkQHFGwyR7iR_ZUxdapTd6nsZclw59BeQjzYEhWohkFu5zTFkVI77gDDtrXL4S-syrM5q85_-LsJUrS0wZQ5EbC7KJq6PNbf63MGL6BePXo8h6ApKbE6oKF75Lpauj7s44p2Rb0pMQi6wXLBFs3iFt-RwXJ7t6YD1SryZOjqQ?width=270&height=252&cropmode=none)
 
 </center>
 
-2. 深部触诊法 (deep palpation) 
+2. 深部触诊法 (deep palpation)
    - 检查时可用单手或两手, 由浅入深, 逐渐加压以达到深部触诊的目的
    - 深部触诊法可触及的深度多在 2cm 以上, 可达 4、5cm, 主要用于检查腹腔病变和脏器情况
    - 根据检查目的和手法不同可分为以下几种
 3. 双手触诊法: 
    - 将左手掌置于被检查脏器或包块的背后部, 向右手方向托起, 有利于右手触诊检查。用于肝、脾、肾和腹腔肿物的检查
 4. 胆囊触诊法
-   - 患者取仰卧位, 腹壁放松, 检查者以左手掌平放于患者右肋下部, 以拇指指腹勾压于右肋下胆囊点处, 然后嘱患者缓慢深吸气, 在吸气过程中发炎的胆囊下移时碰到用力按压的拇指, 即可引起疼痛, 此为胆囊触痛。 如因剧烈疼痛而致吸气中止称胆囊触痛征阳性, 又称==莫菲 (Murphy) 征==阳性。 常见于急性胆囊炎。
+   - 患者取仰卧位, 腹壁放松, 检查者以左手掌平放于患者右肋下部, 以拇指指腹勾压于右肋下胆囊点处, 然后嘱患者缓慢深吸气, 在吸气过程中发炎的胆囊下移时碰到用力按压的拇指, 即可引起疼痛, 此为胆囊触痛。 如因剧烈疼痛而致吸气中止称胆囊触痛征阳性, 又称==莫菲 (Murphy)征==阳性。 常见于急性胆囊炎。
 5. 冲击触诊法
    *不建议做了*
 
@@ -277,23 +272,19 @@
 3. 手法轻柔
 4. 从无病部位到有病部位
 5. 观察病人表情
-6.  边检查边思考
+6. 边检查边思考
 
-### 3.1.3. 叩诊 (percussion) 
+### 3.1.3. 叩诊 (percussion)
 
 ***是用手指叩击身体表面某一部位, 使之震动而产生音响 , 根据震动和声响的特点来判断被检查部位的脏器状态有无异常的一种方法***
 
-#### 3.1.3.1. 方法 
+#### 3.1.3.1. 方法
 
-1. 直接叩诊法 (direct percussion)  医师右手中间三手指并拢 , 掌面直接拍击被检部位的叩诊法 。 适用于胸, 腹部范围较广泛的病变, 如胸膜粘连或增厚, 大量胸水或腹水及气胸等 。
-2. 间接叩诊法 (indirect percussion) 
+1. 直接叩诊法 (direct percussion) 医师右手中间三手指并拢 , 掌面直接拍击被检部位的叩诊法 。 适用于胸, 腹部范围较广泛的病变, 如胸膜粘连或增厚, 大量胸水或腹水及气胸等 。
+2. 间接叩诊法 (indirect percussion)
 
-   <center>
+![indirect](https://dsm04pap003files.storage.live.com/y4mBmo_HWp6v2vP7c_2eNE1M8Trhlcz1Arzac568WqENBMdgk9dWtPA_w8J7ahvssED04blF4_-1I0S7oVQ76YSVVFMICHRIDZTjHLGtUr_qA_AFCYzXAglwGJ0FjKG1orGYvbJKXT_IBoqHF6KUO3CHRlHD1JA9Sw0ML6bcxxCQz7PT0uDkWfPY9QOI1QCYqGY?width=468&height=397&cropmode=none)
 
-   ![indirect](https://dsm04pap003files.storage.live.com/y4mBmo_HWp6v2vP7c_2eNE1M8Trhlcz1Arzac568WqENBMdgk9dWtPA_w8J7ahvssED04blF4_-1I0S7oVQ76YSVVFMICHRIDZTjHLGtUr_qA_AFCYzXAglwGJ0FjKG1orGYvbJKXT_IBoqHF6KUO3CHRlHD1JA9Sw0ML6bcxxCQz7PT0uDkWfPY9QOI1QCYqGY?width=468&height=397&cropmode=none)
-
-   </center>
-      
 - 将左手中指==第二指节==紧贴于叩诊部位；其它手指==抬起==
 - 右手中指==指端==叩击左手==中指末端指关节处==或==第二节指骨远端==
 - 叩击方向与叩诊部位的体表==垂直==
@@ -309,18 +300,18 @@
 
    <center>
 
-   ![percussion_1](https://dsm04pap003files.storage.live.com/y4mVZQD0JsAp0STbuZqDu9ygtEU_HFpJsLky2bk2xOOpN7e_QPssWH02mN4d2InRNUV9hOdCghXrNvhal3os6wlO6qAVsvhRwTLg1HIXO4bxnqHKut7kOlQ_NEoYu99qsCQlYOVu7fQpXEGHHYCLExnG6VEV3oGCz5hyzFzPbTCCgM-cFO3wOGzxYKXBDjnQ4iD?width=686&height=307&cropmode=none) 
+   ![percussion_1](https://dsm04pap003files.storage.live.com/y4mVZQD0JsAp0STbuZqDu9ygtEU_HFpJsLky2bk2xOOpN7e_QPssWH02mN4d2InRNUV9hOdCghXrNvhal3os6wlO6qAVsvhRwTLg1HIXO4bxnqHKut7kOlQ_NEoYu99qsCQlYOVu7fQpXEGHHYCLExnG6VEV3oGCz5hyzFzPbTCCgM-cFO3wOGzxYKXBDjnQ4iD?width=686&height=307&cropmode=none)
 
-   ![precussion_2](https://dsm04pap003files.storage.live.com/y4mqp9bFSvbVB3OZRcjKgYOO3gBv__u3ZRadlKtps8PetLu9vQnhEd-POheQFfikp0HX_d7DBWNd5dIdwMaffym4DB9Qe6r0DhGoQWAgFwkkWOi5g8BTmNWdDDOsu89TsWihGxpsKPL9lNP5Gh-zbyMxR-70gtrEtSB_ariE5JzhGle5OUg8Sd76l5DVji9wyyi?width=727&height=278&cropmode=none) 
+   ![precussion_2](https://dsm04pap003files.storage.live.com/y4mqp9bFSvbVB3OZRcjKgYOO3gBv__u3ZRadlKtps8PetLu9vQnhEd-POheQFfikp0HX_d7DBWNd5dIdwMaffym4DB9Qe6r0DhGoQWAgFwkkWOi5g8BTmNWdDDOsu89TsWihGxpsKPL9lNP5Gh-zbyMxR-70gtrEtSB_ariE5JzhGle5OUg8Sd76l5DVji9wyyi?width=727&height=278&cropmode=none)
 
    </center>
 
-### 3.1.4. 听诊 (auscultation) 
+### 3.1.4. 听诊 (auscultation)
 
 #### 3.1.4.1. 方法
 
-1. 直接听诊法 (direct auscultation) : 将耳直接贴于体壁进行听诊
-2. 间接听诊法 (indirect auscultation) : 用听诊器听诊 。 用于心, 肺, 腹的听诊外, 还可用于血管音, 皮下气肿音 、骨折面摩擦音等的听诊
+1. 直接听诊法 (direct auscultation): 将耳直接贴于体壁进行听诊
+2. 间接听诊法 (indirect auscultation): 用听诊器听诊 。 用于心, 肺, 腹的听诊外, 还可用于血管音, 皮下气肿音 、骨折面摩擦音等的听诊
 
 #### 3.1.4.2. 注意事项
 
@@ -328,14 +319,14 @@
 - 双侧对比
 - 全神贯注, 边听诊边思考
 
-### 3.1.5. 嗅诊 (olfactory examination) 
+### 3.1.5. 嗅诊 (olfactory examination)
 
 ***是通过嗅觉来判断发自病人的异常气味与疾病之间关系的一种方法 。***
 
-> **e.g.** 
+> **e.g.**
 > **尿毒症 ； 有机磷中毒 ； 肝硬化**
 
-## 3.2. 体检注意事项: 
+## 3.2. 体检注意事项:
 
 1. 站病人右侧
 2. 体现人文关怀: 自我介绍、简短交谈
@@ -355,26 +346,28 @@
 - **坐位**: 一般情况和生命体征→上肢→头颈部→后背部（包括肺、脊柱、肾区、骶部）患者取卧位前、侧胸部（心、肺）→腹部→下肢→肛门直肠→外生殖器→神经系统（最后站立位）
 
 # 4. 体征
+
    - 关节红肿——无外伤史则怀疑痛风
-   - 颈静脉怒张——右心有问题 (血液无法回到心脏) 
+   - 颈静脉怒张——右心有问题 (血液无法回到心脏)
    - 巩膜黄染
 
-# 5. 实验室检查 (laboratory examination) 
+# 5. 实验室检查 (laboratory examination)
 
-# 6. 辅助检查 (assistant examination) 
+# 6. 辅助检查 (assistant examination)
 
-**CT等**: 
+**CT等**:
 
 <center>
 
-![base64MRA](https://dsm04pap003files.storage.live.com/y4mtFSsesafQ-7zx79l_vEmHR7iJYwfVKfQJC71P9NsLoL-ouclaD02-vkGniJEKB6Vq2mNUZd2P5IpeEUnI6M-uuKmaaz6ohjki1vGPQ__NLwzIWyfm0Vup-Oao0NmU3kePgafnACBQu3ARRBil1Bfn5yCuEhButX5h7GnULi6yo9XUp0qTq4NWxLOpdDOoJhp?width=1072&height=668&cropmode=none) 
+![base64MRA](https://dsm04pap003files.storage.live.com/y4mtFSsesafQ-7zx79l_vEmHR7iJYwfVKfQJC71P9NsLoL-ouclaD02-vkGniJEKB6Vq2mNUZd2P5IpeEUnI6M-uuKmaaz6ohjki1vGPQ__NLwzIWyfm0Vup-Oao0NmU3kePgafnACBQu3ARRBil1Bfn5yCuEhButX5h7GnULi6yo9XUp0qTq4NWxLOpdDOoJhp?width=1072&height=668&cropmode=none)
 
 这是肾动脉狭窄引起的高血压
 
 </center>
 
 # 7. 基因诊断
-分析某一特定基因的结构 (DNA水平) 或功能 (RNA水平) 是否正常, 可助==诊断、检测==疾病
+
+分析某一特定基因的结构 (DNA水平)或功能 (RNA水平)是否正常, 可助==诊断、检测==疾病
 
 # 8. 临床思维的重要性
 
