--- a/Diagnostics/3 《胸肺检查》.md
+++ b/Diagnostics/3 《胸肺检查》.md
@@ -43,24 +43,28 @@
   - [4.4. 胸腔积液](#44-胸腔积液)
   - [4.5. 气胸](#45-气胸)
 
-
 # 1. 胸部的体表标志
 
-## 1.1. 骨骼标志: 
+## 1.1. 骨骼标志
 
 - 胸骨上切迹: 位于胸骨柄的上方。正常情况下==气管位于切迹正中==。
 - 胸骨柄: 为胸骨上端略呈六角形的骨块。其上部两侧与左右锁骨的胸骨端相连接, 下方则与胸骨体相连。
 - 胸骨角: 它与第二肋软骨相连, 因而是临床计数前肋及肋间隙的骨性标志。
 - 肋骨: 共12对。于背部与相应的胸椎相连, 由后上方向前下方倾斜, 其倾斜度上方略小, 下方稍大。
+
 > PS.
 > 部分人是11对肋
+
 - 腹上角: 为左右肋弓(由两侧的第7～10肋软骨相互连接而成)在胸骨下端会合处所形成的夹角, 又称胸骨下角, 相当于横膈的穹隆部。正常约70°～ll0°。
+
 > PS.
 > 胃疼的部位就是这里
+
 - 剑突: 为胸骨体下端的突出部分, 呈三角形, 其底部与胸骨体相连。
 - 第七颈椎棘突: 是背部计数胸椎棘突的标志。
 - 肩胛下角: 位于肩胛骨的最下端。被检查者取直立位两上肢自然下垂时, 肩胛下角可作为第7或第8肋骨水平的标志, 或相当于第7或8胸椎的水平。
 - 肋脊角: 为第12肋骨与脊柱构成的夹角。其前为肾脏和输尿管上端所在的区域。
+
 > PS.
 > 如果==叩击痛==有考虑肾脏到输卵管的一段有结石或者病变
 
@@ -138,6 +142,7 @@
 - 营养、皮肤、淋巴结、骨骼肌发育等。
 
 ### 2.1.2. 检查
+
 - **静脉**:
 	- 上腔静脉阻塞, 静脉血流方向自上而下；
 	- 下腔静脉阻塞, 血流方向自下而上。
@@ -211,15 +216,16 @@
 
 ## 3.1. 视诊:
 
-*视诊内容*
+***视诊内容***
 
 ### 3.1.1. 生理弯曲: 
 
-***观察胸廓形态及肩胛下角的位置及脊柱的四个生理弯曲: ***
+***观察胸廓形态及肩胛下角的位置及脊柱的四个生理弯曲***
 
 1. 正常形态: 为圆柱形, 前后径与横径之比为1: 1.5,两侧对称, 无局部凹陷或凸起。
 2. 病理胸廓: 可见桶状胸、扁平胸及佝偻胸(鸡胸, 佝偻病串珠, 肋膈沟, 漏斗胸等)。
-### 3.1.2. 呼吸运动: 
+
+### 3.1.2. 呼吸运动
 
 ***注意观察呼吸频率(应在病人不觉察时计算之)、节律, 类型, 深度以及两侧呼吸运动是否相等。***
 
@@ -241,6 +247,7 @@
 > 吸气困难——大气道；呼气困难——小气道 (2cm一下的小气道)***
 
 #### 3.1.2.2. 呼吸困难的体位
+
 - 端坐呼吸: 心衰、二尖瓣狭窄、==重症哮喘==、重度慢阻肺；
 - 转侧或折身呼吸: 心衰、神经性疾病；
 - 平卧呼吸: 肺叶切除(肺容量不够)、神经性疾病、低容量、肝硬化。
@@ -285,7 +292,7 @@
 ||**间停呼吸**|**有规律的深度呼吸之后突然停止**|**中枢神经系统疾病**|**常为临终前危急征象**|
 ||**不规则呼吸**|**节律不规则, 呼吸浅表、不均**||**中枢性呼吸衰竭**|
 
-### 3.1.3. 胸壁静脉: 
+### 3.1.3. 胸壁静脉
 
 ***在上腔或下腔静脉梗阻时, 可出现侧枝循环, 有胸壁静脉怒张, 并注意血流方向的检查。***
 
@@ -296,9 +303,9 @@
 
 ### 3.2.1. 触诊的内容及临床意义
 
-#### 3.2.1.1. 胸廓扩张度: 
+#### 3.2.1.1. 胸廓扩张度
 
-#### 3.2.1.2. 语音震颤 (触觉语颤) 
+#### 3.2.1.2. 语音震颤 (触觉语颤)
 
 ***语音震颤的强度受发音的强弱, 音调的高低, 胸壁的厚薄等因素的影响。一般来说, 发音强、音调低、胸壁薄者语音震颤强, 反之则弱。正常情况下, 男性和消瘦者较儿童、女性和肥胖者强；前胸上部和右胸上部较前胸下部和左胸上部为强。***
 
@@ -318,7 +325,7 @@
 
 ## 3.3. 叩诊
 
-1. 叩诊的方法: 
+1. 叩诊的方法:
    1. 直接叩诊法: 用右手==中间三指的掌面==直接拍击被检查的部位, 借助振动感来判断病变情况。
    2. 间接叩诊法
 2. 注意事项
@@ -367,12 +374,12 @@
 1. 肺泡呼吸音: 是气体进入肺泡引起肺泡壁弹性变化所形成的声音。其听诊特点为似上齿轻咬下唇吸气时发出的低弱柔和的 "fu" "音。==吸气时相长声音稍强, 而呼气时相弱且音低。==
 2. 支气管肺泡呼吸音: 是支气管呼吸音与肺泡呼吸音混合而成, 其特点介于两者之间。正常情况下在右肺尖、胸骨角附近以及肩胛区可以听到。
 3. 支气管呼吸音: 其产生是吸气时, 气流在声门、气管和支气管内形成涡流所至。听诊特点为: 吸气短而弱, 呼气时间长而强。正常情况下在喉部、胸骨上窝及背部颈6～胸2之间的椎体可以听到。
-    
+
 	<center>
 	
 	![breathingSound](https://dsm04pap003files.storage.live.com/y4mkQebMM8thH2rHw4fSr05QonrKottpI9KesMtJabK_K-BOT3qaTtV8Z_PxJXz25CDd5q6f9rCzl2vfwnesrnmCXTRI5aWY_ix9vFpGhYnjoLsSoU0-ZG6Pn5SxuYrbQjIy7KsTYbznaCjKHo58O15xq6agSVb10PqU3mb6EDStmI80jRvadOVVdtd0Ljw6QTg?width=337&height=407&cropmode=none)
 	</center>
-	
+
 >- 三种正常呼吸音示意图
 >   - 升支为吸气相, 降支为呼气相。
 >   - 吸、呼气相间的空隙为短暂间歇。
@@ -412,7 +419,7 @@
     1. 高调干罗音, 又称哨笛音或飞箭音, 是气流快速穿过狭窄或痉挛的支气管发出的高调声音。哮鸣音也是一种高调干罗音。
     2. 低调干罗音, 又称鼾音, 其音调低, 如同熟睡时发出的鼾声, 是由于气流通过有粘稠分泌物的较大支气管或气管时发生震动而产生的声音。干罗音是支气管有病变的表现。
 	    - 打鼾的声音就是一种大气道阻塞的干罗音
-1. 干湿啰音的分布与特点
+3. 干湿啰音的分布与特点
 
     <center>
 
