--- a/Diagnostics/4 《呼吸系统症状体征》.md
+++ b/Diagnostics/4 《呼吸系统症状体征》.md
@@ -3,12 +3,32 @@
 ![summary](https://dsm04pap003files.storage.live.com/y4mm-MuJSwFERAUjnhGRpPlHl7H6ZsmBvwsjuaPS4O8yl-_HiBTkj9Lg3EHaOS40z6t5LiXrtDdV3TBlDUypLkCPncip9TkVPKWHj70t5s1GSmXbZHPq830eAmjDF7tG7BrPzLv3_dwZNRWPte2YM7epw4PdHZ6fe97lx5R5ug2Wo8oQMuVo3JTYTBfmyc1guV4?width=2792&height=1408&cropmode=none)
 </center>
 
-# 呼吸系统症状体征
+- [1. 呼吸系统的症状](#1-呼吸系统的症状)
+  - [1.1. 咳嗽咳痰](#11-咳嗽咳痰)
+  - [1.2. 咳血](#12-咳血)
+  - [1.3. 胸痛](#13-胸痛)
+  - [1.4. 紫绀](#14-紫绀)
+  - [1.5. 呼吸困难](#15-呼吸困难)
+- [2. 呼吸系统的体征](#2-呼吸系统的体征)
+  - [2.1. 视诊](#21-视诊)
+  - [2.2. 触诊](#22-触诊)
+  - [2.3. 叩诊](#23-叩诊)
+  - [2.4. 听诊](#24-听诊)
+- [3. 常见疾病](#3-常见疾病)
+  - [3.1. 大叶性肺炎](#31-大叶性肺炎)
+  - [3.2. 慢性阻塞性肺疾病](#32-慢性阻塞性肺疾病)
+    - [3.2.1. 肺气肿](#321-肺气肿)
+  - [3.3. 支气管哮喘](#33-支气管哮喘)
+  - [3.4. 胸腔积液](#34-胸腔积液)
+  - [3.5. —气胸](#35-气胸)
+  - [3.6. 肺不张](#36-肺不张)
+  - [3.7. 肺实变](#37-肺实变)
+
 
 ---
-## 1. 呼吸系统的症状
+# 1. 呼吸系统的症状
 
-### 1. 咳嗽咳痰
+## 1.1. 咳嗽咳痰
 1. 病因
     - 呼吸道疾病
     - 胸膜疾病
@@ -38,7 +58,7 @@
     - 咳嗽的程度与音色
     - 咳嗽伴随症状
 
-#### 2. 咳血
+## 1.2. 咳血
 1. 病因
     - 支气管疾病
     - 肺部疾病
@@ -64,7 +84,7 @@
     - 伴随症状
     - 个人史
 
-#### 3. 胸痛
+## 1.3. 胸痛
 1. 病因
     1. 胸壁疾病
     2. 心血管疾病
@@ -88,7 +108,7 @@
     2. 胸痛部位，性质，持续时间，放射痛
     3. 呼吸，心血管，消化疾病
 
-#### 4. 紫绀
+## 1.4. 紫绀
 1. 病因
     1. 肺源性
     2. 心源性
@@ -102,7 +122,7 @@
     2. 部位及特点
     3. 发病诱因及病程
 
-#### 5. 呼吸困难
+## 1.5. 呼吸困难
 1. 病因
     1. 呼吸系统疾病
     2. 循环系统疾病
@@ -131,9 +151,9 @@
     4. 伴随症状
 
 ---
-## 2. 呼吸系统的体征
+# 2. 呼吸系统的体征
 
-### 1. 视诊
+## 2.1. 视诊
 - 扁平胸
 - 桶状胸
 - 佝偻病胸
@@ -146,19 +166,19 @@
 - 呼吸频率
 - 呼吸节律
 
-### 2. 触诊
+## 2.2. 触诊
 - 胸廓扩张度
 - 语音震颤
 - 胸膜摩擦感
 
-### 3. 叩诊
+## 2.3. 叩诊
 - 清音
 - 过清音
 - 鼓音
 - 浊音
 - 浊音
 
-### 4. 听诊
+## 2.4. 听诊
 1. 正常呼吸音:
     1. 气管呼吸音
     2. 支气管呼吸音
@@ -175,7 +195,10 @@
 5. 胸膜摩擦音
 
 ---
-## 3. 常见疾病——大叶性肺炎
+# 3. 常见疾病
+
+## 3.1. 大叶性肺炎
+
 <center>
 
 ![lobarpneumonia](https://dsm04pap003files.storage.live.com/y4mSdEOWcehHZhFHGjw6H8iHIcJpcvTyHwYhes858JgfFLvdAI7kPEo4CJZilGX5aXM0AIjr4eGstg8tKMn2CUM_PFzqW9NEIwVn9B_0ARpcc5rrNqtiR5MJ9qkfZcqjuXrcrU5CWxDWtQNAm51Zop3xK_F_fuOez8-YNOF873EW4n5Dk9wqcdSOWieWikdxInB?width=687&height=432&cropmode=none)
@@ -193,9 +216,9 @@
 	2. 胸部影像的检查——CT/胸片都可以
 
 ---
-## 4. 常见疾病——慢性阻塞性肺疾病
+## 3.2. 慢性阻塞性肺疾病
 
-### 肺气肿
+### 3.2.1. 肺气肿
 <center>
 
 ![pulmonaryEmphysema_CT](https://dsm04pap003files.storage.live.com/y4m83KNmifqsh-NoxZjf67KqI6FwOutgu8X8RzjstodBpRKUeWmLW3tVoSpmLMJSMU2AvPeqmUCXYG52xk2ItH-XXTtlPRi2gINO3YhcCHaWF_NKwwbp-K57YXqlWQeAIoXHPLi97s1bpoPdutgOcppMRVldPe5RiYLYzkD8CXHOeTPjgW-MIBk4nA2lvRTKZgJ?width=553&height=425&cropmode=none)
@@ -217,7 +240,7 @@
     4. 听诊：肺泡呼吸音减弱，呼气延长，语音共振减弱，心音遥远
 
 ---
-## 5. 常见疾病——支气管哮喘
+## 3.3. 支气管哮喘
 1. 症状
    季节性发作，发作前常有诱因，接触过敏原。
    喷嚏、流涕，咳嗽，胸闷，气促
@@ -225,7 +248,7 @@
    呼气性呼吸困难，呼吸运动变小，语音共振减弱，叩诊呈过清音(因为有气胸的症状)，两肺布满干啰音
 
 ---
-## 6. 常见疾病——胸腔积液
+## 3.4. 胸腔积液
 ***胸膜壁层和脏层之间的液体***
 ><u>毛细血管内静水压增高，胶体渗透压降低，胸膜毛细血管壁通透性增加</u>
 >300-500ml是少量的胸腔积液，==图中大概为2000ml==，严重的肿瘤的话一天可以有3000ml的胸腔积液产生
@@ -269,7 +292,7 @@
         5. 乳房包块
         6. 皮肤凹陷性浮肿或合并有心包积液，腹水
 
-## 7. 常见疾病——气胸
+## 3.5. —气胸
 ***任何原因使胸膜破裂，气体进入胸膜腔***
 1. 气胸类型
     1. 闭合性气胸
@@ -301,7 +324,7 @@
         4. 有职业接触史
         5. 有慢性阻塞性肺疾病，肺大庖，哮喘
 
-## 8. 常见疾病——肺不张
+## 3.6. 肺不张
 1. 病因
     1. 阻塞性肺炎
     2. 外压性肺炎
@@ -327,7 +350,7 @@
         2. 体型消瘦，营养不良：肿瘤、结核
         3. 四肢乏力减退，腱反射弱：神经肌肉病变
 
-## 9. 常见疾病——肺实变
+## 3.7. 肺实变
 
 <center>
 
