--- a/Diagnostics/5 《胸肺检查、浆膜腔积液、脑脊液》.md
+++ b/Diagnostics/5 《胸肺检查、浆膜腔积液、脑脊液》.md
@@ -1,6 +1,51 @@
-# 胸肺检查、浆膜腔积液、脑脊液
+- [1. 浆膜腔积液和脑脊液检查](#1-浆膜腔积液和脑脊液检查)
+- [2. 胸腔积液](#2-胸腔积液)
+	- [2.1. \<临床意义\>](#21-临床意义)
+		- [2.1.1. 一般性状检测:](#211-一般性状检测)
+		- [2.1.2. 化学检测:](#212-化学检测)
+		- [2.1.3. 显微镜检查:](#213-显微镜检查)
+		- [2.1.4. 细菌学检查](#214-细菌学检查)
+	- [2.2. 一般性状检测\<临床意义\>](#22-一般性状检测临床意义)
+	- [2.3. 浆膜腔液细胞计数及分类\<临床意义\>](#23-浆膜腔液细胞计数及分类临床意义)
+	- [2.4. 浆膜腔液葡萄糖测定\<临床意义\>](#24-浆膜腔液葡萄糖测定临床意义)
+	- [2.5. 浆膜腔液乳酸脱氢酶(LDH)活性测定\<临床意义\>](#25-浆膜腔液乳酸脱氢酶ldh活性测定临床意义)
+	- [2.6. 浆膜腔液溶菌酶检测\<临床意义](#26-浆膜腔液溶菌酶检测临床意义)
+	- [2.7. 浆膜腔液淀粉酶检测\<临床意义\>](#27-浆膜腔液淀粉酶检测临床意义)
+	- [2.8. 浆膜腔液铁蛋白(1BP)测定\<临床意义\>](#28-浆膜腔液铁蛋白1bp测定临床意义)
+		- [2.8.1. 漏出与渗出液鉴别](#281-漏出与渗出液鉴别)
+- [3. 脑脊液检查](#3-脑脊液检查)
+	- [3.1. 脑脊液(CSF)](#31-脑脊液csf)
+		- [3.1.1. 脑脊液标本采集](#311-脑脊液标本采集)
+		- [3.1.2. 脑脊液的功能](#312-脑脊液的功能)
+		- [3.1.3. 穿刺出血和病理出血鉴别](#313-穿刺出血和病理出血鉴别)
+	- [3.2. 常规检查的临床意义](#32-常规检查的临床意义)
+		- [3.2.1. 透明度临床意义](#321-透明度临床意义)
+		- [3.2.2. 细胞计数临床意义](#322-细胞计数临床意义)
+		- [3.2.3. 蛋白定性的临床意义](#323-蛋白定性的临床意义)
+		- [3.2.4. 葡萄糖试验的临床意义](#324-葡萄糖试验的临床意义)
+		- [3.2.5. 氯化物的临床意义](#325-氯化物的临床意义)
+		- [3.2.6. 细菌及寄生虫检查的临床意义](#326-细菌及寄生虫检查的临床意义)
+		- [3.2.7. 免疫学检查](#327-免疫学检查)
+		- [3.2.8. 细胞分类(DC)的临床意义](#328-细胞分类dc的临床意义)
+	- [3.3. 化学检验:](#33-化学检验)
+		- [3.3.1. 蛋白定量](#331-蛋白定量)
+		- [3.3.2. 蛋白电泳的临床意义](#332-蛋白电泳的临床意义)
+		- [3.3.3. 髓鞘碱性蛋白测定](#333-髓鞘碱性蛋白测定)
+		- [3.3.4. TAU蛋白测定](#334-tau蛋白测定)
+	- [3.4. 常见中枢神经系统脑脊液的特点](#34-常见中枢神经系统脑脊液的特点)
+	- [3.5. 酶学与免疫学测定](#35-酶学与免疫学测定)
+		- [3.5.1. 脑脊液酶学测定](#351-脑脊液酶学测定)
+		- [3.5.2. 脑脊液免疫球蛋白测定](#352-脑脊液免疫球蛋白测定)
+	- [3.6. 其他测定](#36-其他测定)
+		- [3.6.1. 压力测定:](#361-压力测定)
+		- [3.6.2. 比重测定:](#362-比重测定)
+		- [3.6.3. 酸碱度及气体张力测定](#363-酸碱度及气体张力测定)
+		- [3.6.4. 色氨酸试验](#364-色氨酸试验)
+		- [3.6.5. 乳酸定量试验](#365-乳酸定量试验)
+		- [3.6.6. 谷氨酰胺测定](#366-谷氨酰胺测定)
 
-### 5. 气胸
+---
+## 0.1. 气胸
 1. 症状
     有诱因，突然胸痛，进行性呼吸困难，不能平卧，可有咳嗽，严重者有伴烦躁不安，大汗淋漓，脉速，发绀等。
 2. 体征
@@ -28,7 +73,7 @@
 
 ---
 
-# 浆膜腔积液和脑脊液检查
+# 1. 浆膜腔积液和脑脊液检查
 
 >***PS.***
 >正常情况下这些液体是24h不停循环的，只有当可以正常形成而回收不正常或者产生过多(如压力过高) 超出正常回收的限度的情况下才会出现
@@ -42,9 +87,9 @@
     - 心包膜液:10-50ml。
 - 浆膜腔液颜色:==淡黄色或草绿色。==
 
-## 胸腔积液
-### <临床意义>
-#### 一般性状检测:
+# 2. 胸腔积液
+## 2.1. <临床意义>
+### 2.1.1. 一般性状检测:
 - 颜色:漏出液清晰或微混、淡黄色，渗出液多混浊，草黄色或红色。
 	- 漏出液为水分为主所以是非常淡，非常清，和正常胸膜腔液很相似的
 	- 渗出液由于有蛋白等物质，其甚至可以变为和血一样的颜色。
@@ -52,7 +97,7 @@
 - 比重: <1.018为漏出液; ≥1.018为渗出液。
 	- 正常血液为1.018，漏出液由于水多所以比重低，而渗出液可以比血液的比重更高
 - 凝固性:漏出液一般不易凝固，渗出液易凝固。
-#### 化学检测:
+### 2.1.2. 化学检测:
 - 黏蛋白定性、定量试验: 
 	- 漏出液==李凡它试验==阴性，定量 <30g/L，常由心功能不全、肾病、肝硬化腹水引起。
 	- 渗出液蛋白定性阳性，定量≥ 30g/L，常见于化脓性、结核性疾患，恶性肿瘤，肝静脉血栓形成综合征等。
@@ -70,7 +115,7 @@
 	- 乳酸测定:乳酸含量>10mmol/L, 感染性渗出液，10mmol/L为漏出液
    - 细胞:在胸腹水中检查肿瘤细胞，对诊断胸、腹腔肿瘤十分必要，其敏感度和特异性均达90%。
 
-#### 显微镜检查:
+### 2.1.3. 显微镜检查:
 - 细胞计数、细胞分类计数、脱落细胞检查和寄生虫等。
      >***PS.***
      > - 感染性——中性细胞为主
@@ -78,10 +123,10 @@
      > - 结核——淋巴细胞增高
      > - 转移到胸腔的肿瘤或者原发在胸腔的肿瘤——需要也对脱离细胞进行检测
      > 	- 难以诊断，细胞长期在胸水中浸泡细胞会变形，难以判断，所以需要多次检测(把管子留在那里，几天内连续多次送病理科检验)
-#### 细菌学检查
+### 2.1.4. 细菌学检查
 > ***PS.***
 > 由于类似结核这类的培养时间过久，所以可以用PCR
-### 一般性状检测<临床意义>
+## 2.2. 一般性状检测<临床意义>
 - <u>红色血性</u>:常见于急性结核性胸、腹膜炎，出血性疾病，恶性肿瘤，穿刺损伤等。
 	>***PS.***
 	>血性的胸水临床上称为：洗肉水样的胸水
@@ -117,7 +162,7 @@
 	> 	- 这些免疫性疾病也可以引起其他地方的浆膜腔的积水，有时可以引起心包积液
 - <u>混浊性积液</u>:见于结核性胸、腹膜炎，阑尾炎穿孔，肠梗阻等引起的腹膜炎等。
 
-### 浆膜腔液细胞计数及分类<临床意义>
+## 2.3. 浆膜腔液细胞计数及分类<临床意义>
 1. 漏出液细胞较少，常 <0.1×10<sup>9</sup>/L，以淋巴细胞为主，并有少量间皮细胞。
 	> 远远低于血液中的细胞数
 1. 渗出液细胞较多，常 >0.5×10<sup>9</sup>/L，各种细胞增高见于:
@@ -130,20 +175,20 @@
 	 4. 组织细胞增多:在炎症情况下，或组织细胞病。
 	5. 间皮细胞增多:表示浆膜刺激或受损，在肿瘤性积液时常见明显增多
 
-### 浆膜腔液葡萄糖测定<临床意义>
+## 2.4. 浆膜腔液葡萄糖测定<临床意义>
 - 漏出液中葡萄糖含量与血糖相似，
 - 渗出液中葡萄糖含量低于血糖
 	- 如积液中葡萄糖含量低于3.63mmol/L，或积液中含量同血中含量的比值<0.5，常见于风湿性积液、积脓、恶性肿瘤性积液、结核性积液、狼疮性积液或食管破裂等。
 	> 糖低多为感染性的(同时pH酸性的)
 	> 结核性、狼疮等的也低，但是相对没有化脓性那么低
 	
-### 浆膜腔液乳酸脱氢酶(LDH)活性测定<临床意义>
+## 2.5. 浆膜腔液乳酸脱氢酶(LDH)活性测定<临床意义>
 - 当浆膜腔积液中LDH与血清LDH之比值≥0.6时，多为渗出液;反之则为漏出液。
 	> LDH高为渗出液，低为漏出液
 - 当胸水或腹水中LDH与血清LDH比值>1时，对胸、腹膜恶性肿瘤或转移癌的诊断有一定意义。
 	> 结核性升高，肿瘤性一般不高
 	
-### 浆膜腔液溶菌酶检测<临床意义
+## 2.6. 浆膜腔液溶菌酶检测<临床意义
 <br/>
 结核性胸水患者胸水LZM的含量同血清LZM含量的比值常>1.0，而恶性胸水患者此比值皆<1.0，故对二者的鉴别诊断有一定意义。
 
@@ -151,14 +196,14 @@
 > 比血中高(>1.0)一般不是恶性
 > 比血低一般是恶性 
 
-### 浆膜腔液淀粉酶检测<临床意义>
+## 2.7. 浆膜腔液淀粉酶检测<临床意义>
 - AMY增高见于急性胰腺炎引起的胸腔积液; 食道破裂时胸腔积液中增高，10%恶性肿瘤积液中淀粉酶活性增高。
 > 如果高的非常明显则一般考虑为良性：胰腺炎、食管炎等引起
 
-### 浆膜腔液铁蛋白(1BP)测定<临床意义>
+## 2.8. 浆膜腔液铁蛋白(1BP)测定<临床意义>
 - 胸腔积液中IBP可作为肿瘤性积液与结核性胸膜炎性积液的鉴别诊断指标，若胸水中IBP>1500ng/ml，则为肿瘤性积液的可能性较大。
 <br/>
-### 漏出与渗出液鉴别
+### 2.8.1. 漏出与渗出液鉴别
 |                 |              漏出液               |                                                  渗出液                                                  |
 |:---------------:|:---------------------------------:|:--------------------------------------------------------------------------------------------------------:|
 |      外观       |             清澈透明              |                                          草黄色或洗肉水样、血样                                          |
@@ -188,12 +233,12 @@
 |      LZM       |         增高          |         不高          | 
 
 ---
-## 脑脊液检查
+# 3. 脑脊液检查
 
 > ***PS.***
 > 脑脊液的感染一般由神经科来进行，但是如果发生例如==隐球菌==感染之类的会引起中枢感染的，呼吸科也会进行脑脊液的检查以确定是由有颅内感染/中枢感染
 
-### 脑脊液(CSF)
+## 3.1. 脑脊液(CSF)
 - 脑脊液(Cerebrospinal Fluid,CSF)是循环流动于脑和脊髓表面的一种==无色透明==液体，大约70%来自脑室系统脉络丛的超滤和分泌，其余由脑室的室管膜和珠网膜下腔所产生，通过蛛网膜绒毛回吸收入静脉。
 > ***PS.***
 > 无色透明是因为超滤
@@ -223,7 +268,7 @@ graph TD;
 - 待压力测定后将脑脊液分别收集于3个无菌试管中，第一管作细菌培养，第二管作化学分析和免疫学检查，第三管作一般性状及显微镜检查。每管收集1-2毫升。
 - 脑脊液标本必须立即送验及时检查。
 
-#### 脑脊液标本采集
+### 3.1.1. 脑脊液标本采集
 - 腰椎穿刺
 - 小脑延髓池或侧脑室
 	<center>
@@ -233,7 +278,7 @@ graph TD;
 		*正常值: 0.78-1.76kpa(80-180mmH-O)*
 	</center>
 
-#### 脑脊液的功能
+### 3.1.2. 脑脊液的功能
 - 参与脑组织代谢，通过血管周围间隙运送营养物质至脑细胞并带走其代谢产物，提供了必要的相对稳定的理化微环境。
 	> ***PS.*** 不能正常循环的话会很浑浊 
 - 脑脊液充满于脑室系统、和脊髓蛛网膜下腔内很少一部分存在于脊髓中央管内，形成脑的“保护垫”，避免在震动或损伤时减少震荡，保护脑髓，起缓冲作用。
@@ -242,7 +287,7 @@ graph TD;
 - 脑脊液还通过转运生物胺类物质来影响垂体功能，参与神经内分泌调节。
 	> ***PS.*** PD中脑脊液也会循环障碍，以至于之后影响智力因素
 
-#### 穿刺出血和病理出血鉴别
+### 3.1.3. 穿刺出血和病理出血鉴别
 <center>
 
 ![needle](https://dsm04pap003files.storage.live.com/y4m7od6QoJzF1ayXCfWQhYTG5eXC9vpeIJ1VVJ84ARhomn8b4E5kdjlmgbgMVwWshnRC0KUidVFd-pknvYxIjAxvaOnhOcsHANcwGwVoXk1Wbi2r-NAxGaDuv84hVvrkBKOstWOGPF3yQFg7WrDULse9QebcNNIFb2cc35StqkOmKLR9P4j-NxeZ9zh3f4vG5T5?width=673&height=332&cropmode=none)
@@ -250,7 +295,7 @@ graph TD;
 - 穿刺出血第一管颜色是很红的，之后越来越淡，沉淀之后底下是RBC，上面是清澈的
 - 病理性出血则是，则是一直都是红的，且沉淀之后底下是RBC，但是上面也是红色的
 
-### 常规检查的临床意义
+## 3.2. 常规检查的临床意义
 - 正常CSF是无色水样液体
 - 异常CSF:
 	1. 红色:常见于蛛网膜下腔出血、脑出血、硬膜下血肿等。如腰椎穿刺时观察到流出的脑脊液先红后转无色，为穿刺损伤性出血。
@@ -268,7 +313,7 @@ graph TD;
 > 	- 结核性的脑膜炎：草黄色，稍有浑浊，但是不会很浓
 > 	- 寄生虫的脑膜炎：也会有黄色的浑浊的脑脊液
 
-#### 透明度临床意义
+### 3.2.1. 透明度临床意义
 - 微混:常见于乙型脑炎、脊髓灰质炎、脑脓肿(未破裂者)。
 	> ***PS.***
 	> 乙型脑炎：
@@ -283,7 +328,7 @@ graph TD;
 	> ***PS.*** 最常见的为梅毒
 - 薄膜:常见于结核性脑膜炎等。
 
-#### 细胞计数临床意义
+### 3.2.2. 细胞计数临床意义
 - [正常参考值]
 	- 成人:(O-8)×106/L;
 	- 儿童:(O-15)×106/L;
@@ -294,7 +339,7 @@ graph TD;
 	3. 正常或轻度增高:常见于==浆液性脑膜炎==、==流行性脑炎(病毒性脑炎)==、==脑水肿==等。
 	> 很清澈，蛋白质也稍微增高，细胞数也稍微增高，怀疑脑水肿
 
-#### 蛋白定性的临床意义
+### 3.2.3. 蛋白定性的临床意义
 - [正常参考值]：阴性
 - [临床意义]
 	1. 脑脊液蛋白明显增高(＋＋以上):常见于化脓性脑膜炎、结核性脑膜炎、脊髓腔等中枢神经系统恶性肿瘤及其转移癌、脑出血、蛛网膜下腔出血及梗阻等。
@@ -304,31 +349,31 @@ graph TD;
 	5. 也可仅有蛋白增高而白细胞计数正常或略多，称为“蛋白—细胞分离”，多见于颅内及脊髓肿瘤、椎管梗阻、急性感染性多发性神经炎、甲亢、糖尿病和铅、汞等金属中毒等。
 	> 蛋白高，细胞不高
 
-#### 葡萄糖试验的临床意义
+### 3.2.4. 葡萄糖试验的临床意义
 - 正常参考值:2.5-4.5mmol/L或450-750mg/L，约为血糖值的1/2-2/3左右。
 - 临床意义:
 	- 脑脊液葡萄糖增高:常见于饱餐或静脉注射葡萄糖后、血性脑脊液、糖尿病、脑干急性外伤或中毒、早产儿或新生儿等。
 	- 脑脊液葡萄糖降低:常见于急性化脓性脑膜炎、结核性脑膜炎、霉菌性脑膜炎、神经梅毒、脑瘤、低血糖等。
 	> 高的多是正常的，或者是糖尿病之类的正常的病理变化，应注意的为降低的，降低的多考虑感染的因素
 	
-#### 氯化物的临床意义
+### 3.2.5. 氯化物的临床意义
 - 正常参考值:120-130mmol/L或72-75g/L，较血液氯化物含量高。
 - 临床意义:
 	- 脑脊液氯化物增高:常见于慢性肾功能不全、肾炎、尿毒症、呼吸性酸中毒等。
 	- 脑脊液葡萄糖降低:常见于结核性脑膜炎、化脓性脑膜炎、呕吐、腹泻等。
 
-#### 细菌及寄生虫检查的临床意义
+### 3.2.6. 细菌及寄生虫检查的临床意义
 - 正常参考值:阴性。
 - 临床意义：
 	- 脑脊液中有细菌，可引起细菌性脑膜炎。如急性化脓性脑膜炎常由脑膜炎奈瑟菌、肺炎链球菌、溶血性链球菌、葡萄球菌等引起;病程较慢的脑膜炎常由结核杆菌、新型隐球菌等引起。
 	- 脑脊液中若发现血吸虫卵或肺吸虫卵等，可诊断为脑型血吸虫病或脑型肺吸虫病等。
 	> 脑囊虫病: 影响智力
 
-#### 免疫学检查
+### 3.2.7. 免疫学检查
 - 补体结合试验:对囊虫、肺吸虫、钩端螺旋体及病毒等感染有一定助诊价值;
 - 免疫球蛋白:lgG、lgA、 lgM、lgD、 lgE以及其它免疫球蛋白，其中以lgG浓度最高，IgM不易查得。如lgG增高和查得lgM时，提示中枢神经系统有感染、脱髓鞘性疾病或血脑屏障通透性增加。
 
-#### 细胞分类(DC)的临床意义
+### 3.2.8. 细胞分类(DC)的临床意义
 - [正常参考值]
 	- 红细胞:无或少量;
 	- 淋巴及单核细胞:少量;
@@ -345,8 +390,8 @@ graph TD;
 	8. ==肿瘤细胞==:见于脑、脊髓肿瘤。
 	9. ==白血病细胞==:见于中枢神经系统白血病
 
-### 化学检验:
-#### 蛋白定量
+## 3.3. 化学检验:
+### 3.3.1. 蛋白定量
 - [正常参考值]
 	- 腰椎穿刺:0.20-0.45g/L;
 	- 脑室穿刺:0.05-0.15g/1;
@@ -361,7 +406,7 @@ graph TD;
 	> 脑软化，比如一些遗传性的先天性的脑软化，或者例如中风也会在中风几年之后出现脑软化，但是这种情况下的蛋白升高不会很高 
 	- 多发性神经根炎、浆液性脑膜炎、脑脊髓梅毒、麻痹性痴呆、脑溢血、脑栓塞、蛛网膜下腔出血、流行性脑炎、脊髓灰质炎等脑脊液蛋白亦增加。
 
-#### 蛋白电泳的临床意义
+### 3.3.2. 蛋白电泳的临床意义
 - 正常参考值
 	- 前白蛋白:0.02-0.07;
 	- 白蛋白:0.56-0.76; 
@@ -377,15 +422,15 @@ graph TD;
 	- β-球蛋白增高:常见于某些退行性变如帕金森病、外伤后偏瘫等。
 	- γ-球蛋白增高:常见于脑胶质瘤、重症脑外伤、癫痫、视神经脊髓炎、多发性硬化症、脑部感染、周围神经炎等。
 
-#### 髓鞘碱性蛋白测定
+### 3.3.3. 髓鞘碱性蛋白测定
 - 正常参考值:0~4ug/L
 - 临床意义:是组成髓鞘的主要蛋白，占髓鞘蛋白质总量的30%，是反映中枢神经系统实质性损害的指标，尤其是髓鞘脱失的诊断指标。外伤和神经系统疾病增高，如多发性硬化症等。
 
-#### TAU蛋白测定
+### 3.3.4. TAU蛋白测定
 - 参考值:诊断阿尔茨海默病的临界值为375ng/L。
 - 临床意义:最有意义的阿尔茨海默病诊断指标。其他急慢性脑损伤、脑膜病变等也可增高。
 
-### 常见中枢神经系统脑脊液的特点
+## 3.4. 常见中枢神经系统脑脊液的特点
 
 |                | 压力(mmH<sub>2</sub>O) | 外观                             | 细胞数(×10<sup>6</sup>/L)及分类 | 蛋白质定性 | 蛋白质定量(g/L) | 葡萄糖(mmol/L) | 氯化物(mmol/L) | 细菌                   |
 | -------------- | ---------------------- | -------------------------------- | ------------------------------- | ---------- | --------------- | -------------- | -------------- | ---------------------- |
@@ -397,8 +442,8 @@ graph TD;
 | 脑脓肿(未破裂) | ⬆⬆                     | 无色或黄色微浊                   | 稍增加，以淋巴细胞为主          | +          | ⬆               | 正常           | 正常           | 有或无                 |
 | 脑肿瘤         | ⬆                      | 黄色或无色                       | 正常或稍增加，以淋巴细胞为主    | ± ~ +      | ⬆               | 正常           | 正常           | 无                     | 
 
-### 酶学与免疫学测定
-#### 脑脊液酶学测定
+## 3.5. 酶学与免疫学测定
+### 3.5.1. 脑脊液酶学测定
 - 正常参考值:
 	- 转氨酶(ALT、AST):约为血清酶活性的1/2;
 	- 乳酸脱氢酶(LDH);约为血清酶活性的1/10;
@@ -407,7 +452,7 @@ graph TD;
 	- ALT、AST活性增高:常见于脑梗塞、脑萎缩、急性颅脑损伤、中毒性脑病及中枢转移癌等。
 	- LDH活性增高:常见于细菌性脑膜炎、脑血管病、脑瘤及脱髓鞘病等有脑组织坏死时。
 	- CPK活性增高:见于化脓性、结核性脑膜炎、脑积水、继发性癫痫、多发性硬化症、蛛网膜下腔出血、慢性硬膜下水肿、脑供血不足及脑肿瘤等。
-#### 脑脊液免疫球蛋白测定
+### 3.5.2. 脑脊液免疫球蛋白测定
 - 正常参考值;
 	- lgG:10-40mg/L;
 	- lgA: O-6mg/L;
@@ -419,8 +464,8 @@ graph TD;
 	- lgM增高:常见于近期有化脓性脑膜炎、病毒性脑膜炎、肿瘤、多发性硬化症等。
 	- lgE增高:常见于脑寄生虫病等。
 
-### 其他测定
-#### 压力测定:
+## 3.6. 其他测定
+### 3.6.1. 压力测定:
 - 正常参考值:病人取测卧位时测定:
 	- 成人:0.78～1.76kPa
 	- 儿童:0.4-1.OkPa;
@@ -438,10 +483,10 @@ graph TD;
 		3. 脑脊液分泌减少。
 		4. 不明原因的颅内压降低(低颅压症候群)。
 		5. 穿刺针头不完全在椎管内。
-#### 比重测定:
+### 3.6.2. 比重测定:
 - 正常参考值:1.005-1.009。
 - 临床意义:脑脊液比重增高常见于脑系炎症、肿瘤、出血性脑病、尿毒症、糖尿病等。
-#### 酸碱度及气体张力测定
+### 3.6.3. 酸碱度及气体张力测定
 - 正常参考值:
 	- pH: 7.28-7.32;
 	- HCO<sup>3-</sup>: 22mmol/L;
@@ -450,12 +495,12 @@ graph TD;
 - 临床意义:
 	1. 脑膜炎双球菌性脑膜炎、糖尿病昏迷、结核性脑膜炎时，脑脊液pH值常减低。
 	2. 急性脑梗塞时，脑脊液pH值及PO2降低，而乳酸升高，对判断脑缺氧、代谢和脑血流有帮助。
-#### 色氨酸试验
+### 3.6.4. 色氨酸试验
 - 正常参考值:阴性。
 - 临床意义:化脓性脑膜炎、结核性脑膜炎、流行性脑膜炎，均可出现阳性反应。凡外观为无色透明的脑脊液，本试验阳性，则多为结核性脑膜炎。
-#### 乳酸定量试验
+### 3.6.5. 乳酸定量试验
 - 正常参考值:1.0-2.8mmol/L。
 - 临床意义:脑脊液乳酸含量增高常见于化脓性脑膜炎、结核性脑膜炎、脑血流量明显减少、低碳酸血症、脑积水、癫痫大发作或持续状态、脑脓肿、急性脑梗塞、脑死亡等。
-#### 谷氨酰胺测定
+### 3.6.6. 谷氨酰胺测定
 - 正常参考值:0.41-1.61mmol/L。
 - 临床意义:脑脊液谷氨酰胺增高常见于肝硬化晚期，进入肝昏迷期时可高达3.4mmol/L，出血性脑膜炎呈轻度增高。
