--- a/Diagnostics/6 《循环系统常见症状》.md
+++ b/Diagnostics/6 《循环系统常见症状》.md
@@ -1,6 +1,44 @@
-# 循环系统常见症状
+- [1. 二尖瓣狭窄](#1-二尖瓣狭窄)
+	- [1.1. 二尖瓣瓣口面积](#11-二尖瓣瓣口面积)
+	- [1.2. 血流动力学](#12-血流动力学)
+	- [1.3. 根据狭窄程度和代偿状态分为三期](#13-根据狭窄程度和代偿状态分为三期)
+	- [1.4. 症状](#14-症状)
+	- [1.5. 体征](#15-体征)
+- [2. 视诊](#2-视诊)
+- [3. 触诊](#3-触诊)
+- [4. 叩诊](#4-叩诊)
+- [5. 听诊](#5-听诊)
+- [6. 二尖瓣关闭不全](#6-二尖瓣关闭不全)
+	- [6.1. 血流动力学](#61-血流动力学)
+	- [6.2. 症状](#62-症状)
+	- [6.3. 体征](#63-体征)
+- [7. 主动脉瓣狭窄](#7-主动脉瓣狭窄)
+	- [7.1. 血流动力学](#71-血流动力学)
+	- [7.2. 主动脉瓣瓣口面积](#72-主动脉瓣瓣口面积)
+	- [7.3. 症状](#73-症状)
+	- [7.4. 体征](#74-体征)
+- [8. 主动脉瓣关闭不全](#8-主动脉瓣关闭不全)
+	- [8.1. 血流动力学](#81-血流动力学)
+	- [8.2. 症状](#82-症状)
+	- [8.3. 体征](#83-体征)
+	- [8.4. 靴型心](#84-靴型心)
+- [9. 心包积液](#9-心包积液)
+	- [9.1. 病因](#91-病因)
+	- [9.2. 症状](#92-症状)
+	- [9.3. 体征](#93-体征)
+- [10. 心力衰竭](#10-心力衰竭)
+	- [10.1. 病因](#101-病因)
+	- [10.2. 诱因](#102-诱因)
+	- [10.3. 血流动力学](#103-血流动力学)
+- [11. 左心衰](#11-左心衰)
+- [12. 右心衰](#12-右心衰)
+	- [12.1. 症状](#121-症状)
+	- [12.2. 体征](#122-体征)
 
-## 二尖瓣狭窄
+
+---
+
+# 1. 二尖瓣狭窄
 - 概述主要病因
 	- 风湿热反复发作
 	- 瓣膜钙化
@@ -8,7 +46,7 @@
 - 主要病理解剖
 	- 瓣叶交界处炎症、水肿、粘连及融合;
 	- 严重病变时瓣膜增厚、硬化和腱索缩短及相互粘连
-### 二尖瓣瓣口面积
+## 1.1. 二尖瓣瓣口面积
 - 正常:4.0-6.0 cm<sup>2</sup>
 - 轻度狭窄:1.5-2.0cm<sup>2</sup>
 - 中度狭窄:1.0-1.5cm<sup>2</sup>
@@ -18,7 +56,7 @@
 > - 圆顶征
 > - 鱼口征
 
-### 血流动力学
+## 1.2. 血流动力学
 ```mermaid
 graph TD;
 	A(二尖瓣狭窄)
@@ -32,12 +70,12 @@ graph TD;
 	I(右心衰竭)
 	A-->B-->C-->D-->E-->F-->G-->H-->I
 ```
-### 根据狭窄程度和代偿状态分为三期
+## 1.3. 根据狭窄程度和代偿状态分为三期
 - 代偿期:<2.0cm2，左房代偿性扩张肥厚
 - 左房失代偿:<1.5cm2，左房压显著升高导致失代偿，肺淤血，间质水肿
 - 右室衰竭期:肺动脉高压，右心室负荷增加、肥厚、扩张导致右心衰
 
-### 症状
+## 1.4. 症状
 1. 呼吸困难
 	1. 劳力性呼吸困难
 	2. 阵发性夜间呼吸困难
@@ -61,24 +99,24 @@ graph TD;
 	>增大的左房向后压到了食道引起吞咽苦难
 4. 声音嘶哑
 	> 增大的左房向后压到了喉返神经
-### 体征
-#### 视诊
+## 1.5. 体征
+# 2. 视诊
 - 二尖瓣面容
 	> 大面积的暗红，由于长期缺氧引起的毛细血管的扩张，类似于高原红
 - 口唇轻度发绀
 - 心尖搏动向左移位
 - 心前区隆起（儿童期)
-#### 触诊
+# 3. 触诊
 - 舒张期震颤心
 - 尖搏动左移
 - 收缩期抬举样搏动
-#### 叩诊
+# 4. 叩诊
 - 轻度狭窄
 	- 心浊音界无异常
 - 中度以上
 	- 心腰消失心浊音界呈梨形
 	- 胸骨左缘第2、3肋间心浊音界向左扩大
-#### 听诊
+# 5. 听诊
 - 心尖区低调、隆隆样、舒张中晚期递增型杂音
 
 | 心尖区     | S1亢进、二尖瓣开瓣音                                                          |
@@ -87,7 +125,7 @@ graph TD;
 | 右室扩大   | 胸骨左缘第4、5肋间收缩期吹风样杂音，吸气时增加                                |
 | 晚期房颤   | 心音强弱不等，心律绝对不规则，脉搏短绌                                        | 
 
-## 二尖瓣关闭不全
+# 6. 二尖瓣关闭不全
 概述主要病因
 - 急性：
 	- 感染、缺血→腱索断裂、乳头肌坏死
@@ -101,7 +139,7 @@ graph TD;
 	- 冠心病乳头肌功能失调
 	- 老年性二尖瓣退行性变
 
-### 血流动力学
+## 6.1. 血流动力学
 
 ```mermaid
 graph TD;
@@ -120,13 +158,13 @@ graph TD;
 > ***PS.***
 > 一旦病人出现感觉，出现症状，病情就急转直下了
 
-### 症状
+## 6.2. 症状
 - 心悸
 - 咳嗽
 > 由于肺的顺应性下降
 - 劳力性呼吸困难
 - 疲乏无力
-### 体征
+## 6.3. 体征
 - 视诊
 	- 视左室增大
 	- 心尖搏动向左下移位
@@ -144,14 +182,14 @@ graph TD;
 	- S1减弱，P2亢进和分裂。
 	- 严重反流时心尖区可及S3,以及紧随S3后短促舒张期隆隆样杂音。
 
-## 主动脉瓣狭窄
+# 7. 主动脉瓣狭窄
 - 概述主要病因
 	- 风湿性
 	- 先天性
 	> 比如有的人主动脉瓣天生不是三叶的，而是二叶或者四叶的
 	- 老年退行性主动脉瓣钙化
 
-### 血流动力学
+## 7.1. 血流动力学
 ```mermaid
 graph TD;
 	A(主动脉瓣狭窄)
@@ -178,7 +216,7 @@ graph TD;
 	I-->O
 ```
 
-### 主动脉瓣瓣口面积
+## 7.2. 主动脉瓣瓣口面积
 - 正常瓣口面积：3.0-4.0cm<sup>2</sup>
 
 |                                                  | 轻度狭窄 | 中度狭窄  | 重度狭窄 |
@@ -191,7 +229,7 @@ graph TD;
 
 > 注：1mmHg=0.133kPa
 
-### 症状
+## 7.3. 症状
 - 轻度狭窄：无症状
 - 中重度狭窄：主动脉瓣狭窄三联症
 > ***PS.***
@@ -200,7 +238,7 @@ graph TD;
 > - 心绞痛
 > - 晕厥
 
-### 体征
+## 7.4. 体征
 - 视:
 	- 心尖搏动增强位置可稍移左下
 - 触:
@@ -214,7 +252,7 @@ graph TD;
 - 听
 	- 胸骨右缘第2肋间可及3/6级以上收缩期粗糙喷射性杂音,呈递增递减型，向颈部传导。主动脉瓣区S2减弱，S2逆分裂偶可及心尖区S4
 
-## 主动脉瓣关闭不全
+# 8. 主动脉瓣关闭不全
 - 概述主要病因：
 	- 风湿性
 	- 非风湿性
@@ -222,7 +260,7 @@ graph TD;
 		- 瓣膜脱垂
 		- 感染性心内膜炎
 
-### 血流动力学
+## 8.1. 血流动力学
 
 ```mermaid
 graph TD;
@@ -253,14 +291,14 @@ graph TD;
 	- 左室舒张末期压力迅速上升，可引起心内膜下心肌缺血和急性左心功能不全，诱发急性肺水肿。
 - 慢性
 	- 10-15年后才出现症状
-### 症状
+## 8.2. 症状
 - 心悸
 - 头部搏动感
 - 体位性头晕
 - 胸痛（心绞痛)
 - 劳力性呼吸困难
 
-### 体征
+## 8.3. 体征
 - 视
 	- 心尖搏动向左下移位
 	- 颈动脉搏动明显
@@ -276,12 +314,12 @@ graph TD;
 	- 如为重度反流，则有Austin Flint杂音
 	- 周围血管可及枪击声和Duroziez双重杂音
 
-### 靴型心
+## 8.4. 靴型心
 
-## 心包积液
+# 9. 心包积液
 - 概述
 	- 心包积液指心包腔内积聚过多液体(正常30—50ml)，包括液性、浆液纤维蛋白性、脓性和血性等。
-### 病因
+## 9.1. 病因
 - 感染性
 	- 细菌性；病毒性；真菌性；其它。
 	> 细菌性的在过去结核性心包炎引起的很多，病毒性的如病毒性心包炎
@@ -291,7 +329,7 @@ graph TD;
 	- 过敏性：血清病；过敏性肺炎；过敏性肉芽肿。
 	- 结缔组织性：风湿性；SLE；心梗后综合征；不明原因性。
 
-### 症状
+## 9.2. 症状
 ***取决于心包渗液的量与速度***
 - 胸闷
 - 心悸
@@ -302,7 +340,7 @@ graph TD;
 > 外周血流的循环受阻
 - 休克
 
-### 体征
+## 9.3. 体征
 - 视
 	- 心尖搏动明显减弱甚至消失
 - 触
@@ -321,11 +359,11 @@ graph TD;
 		- 奇脉
 		> 吸气的时候摸不到脉
 
-## 心力衰竭
+# 10. 心力衰竭
 - 概述
 	- 在静脉回流无器质性障碍的情况下，由于心肌收缩力下降引起心排血量减少,不能满足机体代谢需要的一种综合征。临床上以肺和(或）体循环淤血以及组织灌注不足为特征,又称充血性心力衰竭。
 
-### 病因
+## 10.1. 病因
 - 心肌本身病变
 	- 心肌缺血
 	- 心肌坏死
@@ -341,7 +379,7 @@ graph TD;
 	- 容量负荷
 		- 瓣膜关闭不全
 		- 大量输液
-### 诱因
+## 10.2. 诱因
 ***促使其发病或者在原有基础上加重的因素***
 - 感染
 - 心律失常
@@ -350,8 +388,8 @@ graph TD;
 - 过度劳累
 - 药物
 
-### 血流动力学
-#### 左心衰
+## 10.3. 血流动力学
+# 11. 左心衰
 ```mermaid
 graph TD;
 	A(各种病因引起的左室心肌收缩力降低)
@@ -368,7 +406,7 @@ graph TD;
 	D-->E
 ```
 
-#### 右心衰
+# 12. 右心衰
 ***临床常见的右心衰大多发生于左心衰之后，是由于肺循环阻力增加，右心代偿性压力增高，最终导致右心失代偿，产生右心衰。***
 ```mermaid
 graph TD;
@@ -385,7 +423,7 @@ graph TD;
 	C-->E
 	D-->E
 ```
-### 症状
+## 12.1. 症状
 - 左心衰
 	- （肺淤血)乏力
 	- 进行性劳力性呼吸困难
@@ -398,7 +436,7 @@ graph TD;
 	- 食欲不振
 	- 恶心呕吐
 
-### 体征
+## 12.2. 体征
 - 左心衰
 	- 视
 		- 呼吸急促
