--- a/Diagnostics/8 《神经系统检查》.md
+++ b/Diagnostics/8 《神经系统检查》.md
@@ -1,13 +1,17 @@
-### 神经系统检查
+- [1. 重要性](#1-重要性)
+- [2. 颅神经的检查](#2-颅神经的检查)
+  - [2.1. 颅神经](#21-颅神经)
 
-## 重要性
+---
+
+# 1. 重要性
 - 能获取对疾病定位和定性的诊断信息
 - 一般要在患者意识状态清醒时进行
 > 在意识不清楚时也是可以做的，但是结果会不够精准 
 - 配备必须检查工具: 叩诊锤、电筒、大头针、音叉、眼底镜等
 
-## 颅神经的检查
-### 颅神经
+# 2. 颅神经的检查
+## 2.1. 颅神经
 ***1嗅2视3动眼，4滑5叉6外展，7面8听9舌咽，10迷1副舌下全***
 - 嗅神经
 - 视神经
