--- a/Diagnostics/6 《循环系统常见症状》.md
+++ b/Diagnostics/6 《循环系统常见症状》.md
@@ -173,16 +173,21 @@ graph TD;
 	J(肺动脉高压和右心衰竭)
 	A-->B-->C-->D-->E-->F-->G-->H-->I-->J
 ```
+
 > ***PS.***
+> 
 > 一旦病人出现感觉，出现症状，病情就急转直下了
 
 ## 2.2. 症状
+
 - 心悸
 - 咳嗽
 > 由于肺的顺应性下降
 - 劳力性呼吸困难
 - 疲乏无力
+
 ## 2.3. 体征
+
 - 视诊
 	- 视左室增大
 	- 心尖搏动向左下移位
@@ -201,6 +206,7 @@ graph TD;
 	- 严重反流时心尖区可及S3,以及紧随S3后短促舒张期隆隆样杂音。
 
 # 3. 主动脉瓣狭窄
+
 - 概述主要病因
 	- 风湿性
 	- 先天性
@@ -208,6 +214,7 @@ graph TD;
 	- 老年退行性主动脉瓣钙化
 
 ## 3.1. 血流动力学
+
 ```mermaid
 graph TD;
 	A(主动脉瓣狭窄)
@@ -235,6 +242,7 @@ graph TD;
 ```
 
 ## 3.2. 主动脉瓣瓣口面积
+
 - 正常瓣口面积: 3.0-4.0cm<sup>2</sup>
 
 |                                                  | 轻度狭窄 | 中度狭窄  | 重度狭窄 |
@@ -243,15 +251,17 @@ graph TD;
 | 平均跨瓣压差(mmH)                                | <20      | 20-40     | ≥40      |
 | 主动脉瓣口面积(cm<sup2>2</sup>)                  | >1.5     | 1.0-1.5   | <1.0     |
 | 主动脉瓣口面积指数(cm<sup>2</sup>/m<sup>2</sup>) | >0.85    | 0.60-0.85 | <0.6     |
-| 速度比值                                         | >0.5     | 0.25-0.50 | <0.25    | 
+| 速度比值                                         | >0.5     | 0.25-0.50 | <0.25    |
 
 > 注: 1mmHg=0.133kPa
 
 ## 3.3. 症状
+
 - 轻度狭窄: 无症状
 - 中重度狭窄: 主动脉瓣狭窄三联症
 > ***PS.***
-> 主动脉瓣狭窄三联症即: 
+> 
+> 主动脉瓣狭窄三联症即:
 > - 呼吸困难
 > - 心绞痛
 > - 晕厥
@@ -267,10 +277,11 @@ graph TD;
 	>- 由于射出的血流比较少，所以摸到的脉搏比较少
 - 叩:
 	- 心浊音界正常或可稍向左下增大
-- 听
+- 听:
 	- 胸骨右缘第2肋间可及3/6级以上收缩期粗糙喷射性杂音,呈递增递减型，向颈部传导。主动脉瓣区S2减弱，S2逆分裂偶可及心尖区S4
 
 # 4. 主动脉瓣关闭不全
+
 - 概述主要病因: 
 	- 风湿性
 	- 非风湿性
@@ -309,14 +320,17 @@ graph TD;
 	- 左室舒张末期压力迅速上升，可引起心内膜下心肌缺血和急性左心功能不全，诱发急性肺水肿。
 - 慢性
 	- 10-15年后才出现症状
+
 ## 4.2. 症状
+
 - 心悸
 - 头部搏动感
 - 体位性头晕
-- 胸痛（心绞痛)
+- 胸痛 (心绞痛)
 - 劳力性呼吸困难
 
 ## 4.3. 体征
+
 - 视
 	- 心尖搏动向左下移位
 	- 颈动脉搏动明显
@@ -328,13 +342,14 @@ graph TD;
 - 叩
 	- 心向左下增大而心腰不大,呈靴形界
 - 听
-	- 主动脉瓣第二听诊区可及叹气样、递减型、舒张期杂音，向胸骨左下方和心尖区传导（前倾位清晰）。
+	- 主动脉瓣第二听诊区可及叹气样、递减型、舒张期杂音，向胸骨左下方和心尖区传导 (前倾位清晰) 。
 	- 如为重度反流，则有Austin Flint杂音
 	- 周围血管可及枪击声和Duroziez双重杂音
 
 ## 4.4. 靴型心
 
 # 5. 心包积液
+
 - 概述
 	- 心包积液指心包腔内积聚过多液体(正常30—50ml)，包括液性、浆液纤维蛋白性、脓性和血性等。
 ## 5.1. 病因
@@ -373,13 +388,13 @@ graph TD;
 	- 大量积液
 		- 颈静脉怒张
 		- 肝肿大和肝一颈反流征阳性
-		- EWART征（左肺受压)
+		- EWART征 (左肺受压)
 		- 奇脉
 		> 吸气的时候摸不到脉
 
 # 6. 心力衰竭
 - 概述
-	- 在静脉回流无器质性障碍的情况下，由于心肌收缩力下降引起心排血量减少,不能满足机体代谢需要的一种综合征。临床上以肺和(或）体循环淤血以及组织灌注不足为特征,又称充血性心力衰竭。
+	- 在静脉回流无器质性障碍的情况下，由于心肌收缩力下降引起心排血量减少,不能满足机体代谢需要的一种综合征。临床上以肺和(或) 体循环淤血以及组织灌注不足为特征,又称充血性心力衰竭。
 
 ## 6.1. 病因
 - 心肌本身病变
@@ -397,17 +412,22 @@ graph TD;
 	- 容量负荷
 		- 瓣膜关闭不全
 		- 大量输液
+
 ## 6.2. 诱因
+
 ***促使其发病或者在原有基础上加重的因素***
+
 - 感染
 - 心律失常
 - 钠盐摄入过多
-- 输液过多和(或）过快
+- 输液过多和(或) 过快
 - 过度劳累
 - 药物
 
 ## 6.3. 血流动力学
+
 # 7. 左心衰
+
 ```mermaid
 graph TD;
 	A(各种病因引起的左室心肌收缩力降低)
@@ -425,7 +445,9 @@ graph TD;
 ```
 
 # 8. 右心衰
+
 ***临床常见的右心衰大多发生于左心衰之后，是由于肺循环阻力增加，右心代偿性压力增高，最终导致右心失代偿，产生右心衰。***
+
 ```mermaid
 graph TD;
 	A(各种病因引起的右室心肌收缩力降低)
@@ -441,20 +463,23 @@ graph TD;
 	C-->E
 	D-->E
 ```
+
 ## 8.1. 症状
+
 - 左心衰
-	- （肺淤血)乏力
+	-  (肺淤血)乏力
 	- 进行性劳力性呼吸困难
 	- 夜间阵发性呼吸困难
 	- 端坐呼吸
 	- 咳嗽、咯血、泡沫痰
-- 右心衰（体循环淤血)
+- 右心衰 (体循环淤血)
 	- 腹胀
 	- 少尿
 	- 食欲不振
 	- 恶心呕吐
 
 ## 8.2. 体征
+
 - 左心衰
 	- 视
 		- 呼吸急促
